--- a/krimis.html
+++ b/krimis.html
@@ -50,13 +50,13 @@
         <li><a href="/krimis/deaver">Jeffrey Deaver</a></li>
         <li><a href="/krimis/disher">Garry Disher</a></li>
         <li><a href="/krimis/downing">David Downing</a></li>
+        <li><a href="/krimis/eisler">Barry Eisler</a></li>
       </ul>
     </div>
 </div>
 <div class="col">
 <div>
       <ul>
-        <li><a href="/krimis/eisler">Barry Eisler</a></li>
         <li><a href="/krimis/finder">Joseph Finder</a></li>
         <li><a href="/krimis/follett">Ken Follett</a></li>
         <li><a href="/krimis/gardiner">Meg Gardiner</a></li>
@@ -75,19 +75,21 @@
         <li><a href="/krimis/mawer">Simon Mawer</a></li>
         <li><a href="/krimis/mayland">Dan Mayland</a></li>
         <li><a href="/krimis/mckinty">Adrian McKinty</a></li>
+        <li><a href="/krimis/meyer">Deon Meyer</a></li>
+        <li><a href="/krimis/mooney">Chris Mooney</a></li>
       </ul>
     </div>
 </div>
 <div class="col">
 <div>
       <ul>
-        <li><a href="/krimis/meyer">Deon Meyer</a></li>
-        <li><a href="/krimis/mooney">Chris Mooney</a></li>
         <li><a href="/krimis/nicol">Mike Nicol</a></li>
         <li><a href="/krimis/nunn">Malla Nunn</a></li>
+        <li><a href="/krimis/pavone">Chris Pavone</a></li>
         <li><a href="/krimis/paretsky">Sara Paretsky</a></li>
         <li><a href="/krimis/rankin">Ian Rankin</a></li>
         <li><a href="/krimis/ribeiro">Gil Ribeiro</a></li>
+        <li><a href="/krimis/robotham">Michael Robotham</a></li>
         <li><a href="/krimis/russell">Craig Russell</a></li>
         <li><a href="/krimis/sears">Michael Sears</a></li>
         <li><a href="/krimis/silva">Daniel Silva</a></li>
