--- a/krimis/nunn.html
+++ b/krimis/nunn.html
@@ -49,7 +49,7 @@ ist eine australische Autorin: <a href="https://www.simonandschuster.com/authors
 	
 	
 	
-	<a class="active" href="paretsky">Sara Paretsky &gt;</a>
+	<a class="active" href="pavone">Chris Pavone &gt;</a>
 	
 	</div>
 </nav>
