--- a/krimis/robotham.html
+++ b/krimis/robotham.html
@@ -16,7 +16,7 @@
 	<div class="logo is-center is-vertical-align">
 		<a href="/index.html"> <img src="/img/mixc.svg" alt="Banner
 			Miscellanea"></a> 
-		<h4 class="text-grey"> Krimiserien - Gil Ribeiro</h4>
+		<h4 class="text-grey"> Krimiserien - Michael Robotham</h4>
  	</div>
 	<hr style="height:2px; margin-top:8px; margin-bottom:0px;"/>
 </div>
@@ -27,28 +27,51 @@
 						<a class="active" href="/index.html">⌾ Startseite</a>
 					</div>
 			</nav>		
-      <h2 id="gil-ribeiro">Gil Ribeiro</h2>
+      <h2 id="michael-robotham">Michael Robotham</h2>
 
-<p><a href="https://de.wikipedia.org/wiki/Holger_Karsten_Schmidt" target="_blank">Gil Ribeiro</a> (eigentlich Holger Karsten Schmidt) ist ein deutscher Autor.</p>
+<p><a href="https://de.wikipedia.org/wiki/Michael_Robotham" target="_blank">Michael Robotham</a> 
+ist ein australischer Autor.</p>
 
-<h4 id="leander-lost-reihe">Leander-Lost-Reihe</h4>
+<h4 id="joseph-oloughlinvincent-ruiz-reihe">Joseph-O’Loughlin/Vincent-Ruiz-Reihe</h4>
 
 <ul>
-  <li>2017: <em>Lost in Fuseta</em></li>
-  <li>2018: <em>Lost in Fuseta – Spur der Schatten</em></li>
-  <li>2019: Weiße Fracht – Lost in Fuseta</li>
-  <li>2020: <em>Schwarzer August – Lost in Fuseta</em></li>
+  <li>2004: The Suspect (dt. Adrenalin)</li>
+  <li>2005: Lost (dt. Amnesie)</li>
+  <li>2007: The Night Ferry (dt. Todeskampf)</li>
+  <li>2008: Shatter (dt. Dein Wille geschehe)</li>
+  <li>2008: Bombproof )dt. Bis du stribst)</li>
+  <li>2010: Bleed for Me (dt. Todeswunsch)</li>
+  <li>2011: The Wreckage (dt. Der Insider)</li>
+  <li>2012: Say You’re Sorry (dt. Sag, es tut dir leid)</li>
+  <li>2013: Watching You (dt. Erlöse mich)</li>
+  <li>2015: Close your Eyes (dt. Der Sclafmacher)</li>
+  <li>2018: The Other Wife (dt. Die andere Frau)</li>
+</ul>
+
+<h4 id="cyrus-haven-reihe">Cyrus-Haven-Reihe</h4>
+
+<ul>
+  <li>2019: <em>Good Girl, Bad Girl</em> (dt. Schweige still)</li>
+  <li>2020: When She Was Good (dt. Fürchte die Schatten)</li>
+</ul>
+
+<h4 id="weitere-romane">Weitere Romane</h4>
+
+<ul>
+  <li>2014: Life or Death (dt. Um Leben und Tod)</li>
+  <li>2017: The Secrets She Keeps (dt. Die Rivalin)</li>
+  <li>2021: When you are mine (dt. Wenn du mir gehörst)</li>
 </ul>
 
 <!-- previous and next page -->
 <nav class="nav">
 	<div class="nav-right">
 	
-	<a class="active" href="rankin">&lt; Ian Rankin</a>
+	<a class="active" href="ribeiro">&lt; Gil Ribeiro</a>
 	
 	
 	
-	<a class="active" href="robotham">Michael Robotham &gt;</a>
+	<a class="active" href="russell">Craig Russell &gt;</a>
 	
 	</div>
 </nav>
