--- a/krimis/russell.html
+++ b/krimis/russell.html
@@ -66,7 +66,7 @@ ist ein britischer Autor.</p>
 <nav class="nav">
 	<div class="nav-right">
 	
-	<a class="active" href="ribeiro">&lt; Gil Ribeiro</a>
+	<a class="active" href="robotham">&lt; Michael Robotham</a>
 	
 	
 	
