--- a/studer/studerA.html
+++ b/studer/studerA.html
@@ -34,16 +34,18 @@
   Algerisch-französischer Kommunist, der in der von <a href="studerN#nguyen">→ Hô Chi Minh</a>
 gegründeten Union Intercoloniale tätig war.</li>
   <li><span id="abramow"></span><a href="https://de.wikipedia.org/wiki/Alexander_Lasarewitsch_Abramow-Mirow" target="_blank"><strong>Abramow, Alexandr</strong></a> (1895–1937), »Mirov« 96, 153, 154, 359 <br />
-  Inoffiziell Chef des Berliner Stützpunkts der
-  <a href="https://de.wikipedia.org/wiki/Otdel_meschdunarodnych_swjasei" target="_blank"><em>Abteilung für Internationale Verbindungen</em></a> abgekürzt <em>OMS</em> nach
-  der russischen Bezeichnung. Die OMS war zuständig für
+  Russischer Kommunist; »Reisemarschall« der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (96) – 
+  inoffiziell Chef des Berliner Stützpunkts der
+  <a href="https://de.wikipedia.org/wiki/Otdel_meschdunarodnych_swjasei" target="_blank"><em>Abteilung für Internationale Verbindungen</em></a> (abgekürzt <em>OMS</em> nach
+  der russischen Bezeichnung) zuständig für
   geheimdienstliche Kontakte des EKKI zu den kommunistischen Parteien
-  außerhalb der Sowjetunion. Ab 1926 war Abramow operativer Leiter der
-  OMS in Moskau.</li>
-  <li><strong>Abramović, Alexandr</strong> (1888–1972), »Albrecht«, »Zalewski«, »Arno«,
+  außerhalb der Sowjetunion (153f) – ab 1926 war Abramow operativer Leiter der
+  OMS in Moskau (153, 359).</li>
+  <li><span id="abramovic"></span><strong>Abramović, Alexsandr</strong> (1888–1972), »Albrecht«, »Zalewski«, »Arno«,
   »Haber« 142, 349, 351, 359, 360, 363 	<br /> 
-  Einer der ersten Instrukteure der Komintern in Westeuropa, später in
-  Shanghai.  Biographische Angaben in einem Artikel
+  Russischer Kommunist; einer der ersten Instrukteure der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> in
+  Westeuropa (142) –  später in Shanghai.  Biographische Angaben in
+  einem Artikel
   <a href="https://www.kommunismusgeschichte.de/jhk/article/detail/ueberlebenschancen-in-den-chefetagen-der-komintern" target="_blank">„Überlebenschanchen in den Chefetagen der Komintern“</a> im Jahrbuch
   für Historische Kommunismusforschung 2010; siehe auch
   <a href="https://maitron.fr/spip.php?article49893" target="_blank">Kurzbiographie</a> in: <em>Le Maitron, Dictionnaire biographique mouvement ouvrier, mouvement social</em>.</li>
@@ -72,8 +74,10 @@ gab sich in Mexiko als der Rumäne Peter Alexandrescu aus.</li>
   <li><span id="alpari"></span><a href="https://de.wikipedia.org/wiki/Gyula_Alpári" target="_blank"><strong><em>Alpári, Gyulá</em></strong></a> (Julius) (1882–1944), »Ami«, »Richard
   Mannheim« 30, 181, 184, 185, 186, 190, 191, 194, 196, 197, 199, 215,
   281, 421, 422, 424, 431, 542 <br /> 
-  Ungarischer Kommunist, Herausgeber und Leiter der
-  <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a>.</li>
+  Ungarischer Kommunist; 19 Jahre lang Herausgeber und Leiter der
+  <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> (181, 184f, 190f, 196f) – und der Nachfolgepublikation
+  <em>Rundschau</em> nach 1933 in der Schweiz (421ff, 431) – wurde von der
+  Kaderabteilung der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> beschuldigt, mit <a href="studerR#radek">→Radek</a> liiert zu sein (542).</li>
   <li><a href="https://en.wikipedia.org/wiki/Julio_Álvarez_del_Vayo" target="_blank"><strong>Álvarez del Vayo, Julio</strong></a> (1891–1975) 454 <br />
   Außenminister der spanischen Republik, der zusammen mit <a href="studerM#münzenberg">→ Willi
   Münzenberg</a>
@@ -82,8 +86,8 @@ die Presseagentur
   Espagne</em></a> gründete.</li>
   <li><a href="https://en.wikipedia.org/wiki/Saul_Amsterdam" target="_blank"><strong>Amsterdam,
   Saul</strong></a> (1898–1937) »Henrykowski« 169 <br /> 
-  Polnischer Kommunist, Instrukteur der Komintern beim <em>Westeuropäischen
-  Büro (WEB)</em>.</li>
+  Polnischer Kommunist; Instrukteur der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> beim Westeuropäischen
+  Büro (WEB) (169).</li>
   <li><strong>Anderfuhren, Hans</strong> (1893–1973) 471, 479 <br /> 
   Schweizer Kommunist, organisierte Freiwillige für die
   <a href="https://de.wikipedia.org/wiki/Internationale_Brigaden" target="_blank">Internationalen Brigaden</a>, siehe auch
@@ -92,12 +96,12 @@ die Presseagentur
 Residentur der sowjetischen Aufklärung in Shanghai 1930er Jahre.</li>
   <li><span id="appel"></span><a href="https://de.wikipedia.org/wiki/Jan_Appel" target="_blank"><strong>Appel, Jan</strong></a>
   (1890–1985) 69 <br /> 
-  Deutscher Rätekommunist, zusammen mit <a href="studerIJ#jung">→ Franz Jung</a>
-Vertreter der
-  <a href="https://de.wikipedia.org/wiki/Kommunistische_Arbeiterpartei_Deutschlands" target="_blank">KAPD</a> am II. Weltkongress der Komintern.</li>
+  Deutscher Rätekommunist; zusammen mit <a href="studerIJ#jung">→Franz Jung</a>
+  Vertreter der
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Arbeiterpartei_Deutschlands" target="_blank">KAPD</a> am II. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (69).</li>
   <li><span id="aragon"></span><a href="https://de.wikipedia.org/wiki/Louis_Aragon" target="_blank"><strong>Aragon, Louis</strong></a>
   (1897–1982) 455, 465 <br /> 
-  Französischer Schriftsteller, der die spanische Republik untersützte.</li>
+  Französischer Schriftsteller; unterstützte die spanische Republik.</li>
   <li><a href="https://en.wikipedia.org/wiki/Luis_Araquistáin" target="_blank"><strong>Araquistáin, Luis</strong></a> (1886–1959) 471 <br />
   Spanischer Botschafter in Paris, mit dem <a href="studerM#münzenberg">→ Münzenberg</a>
 die Einreise
@@ -115,7 +119,7 @@ die Einreise
   <li><a href="https://en.wikipedia.org/wiki/Augusta_Aasen" target="_blank"><strong>Åsen, Augusta</strong></a>
   (1878–1920) 86, 97 <br />
   Norwegische Delegierte der Arbeitspartei beim II. Weltkongress der
-  Komintern, sie verunglückte in Moskau tödlich.</li>
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>, sie verunglückte in Moskau tödlich (97) –  Foto (86).</li>
   <li><a href="https://de.wikipedia.org/wiki/W._H._Auden" target="_blank"><strong>Auden, W. H.</strong></a> 
   (1907–1973) 466 <br />
   Britisch-amerikanischer Schriftsteller, der die spanische Republik
