--- a/studer/studerB.html
+++ b/studer/studerB.html
@@ -34,22 +34,26 @@
   (1893–1966) 316 <br /> 
   Chinesischer General der
   <a href="https://de.wikipedia.org/wiki/Kuomintang" target="_blank">Kuomintang</a>.</li>
-  <li><a href="https://de.wikipedia.org/wiki/Angelica_Balabanova" target="_blank"><strong>Balabanova, Angelica</strong></a> (1878–1965) 86, 78,  89, 132 <br />
-  Phantasievolle Übersetzerin beim II. Weltkongress der Komintern.</li>
+  <li><a href="https://de.wikipedia.org/wiki/Angelica_Balabanova" target="_blank"><strong>Balabanova, Angelica</strong></a> (1878–1965) 86, 87, 89, 132 <br />
+  Ukrainisch-italienische Kommunistin;
+  Phantasievolle Übersetzerin beim II. Weltkongress der Komintern (87) –
+  Foto (86, 89) – berichtet von der Kritik am <a href="https://de.wikipedia.org/wiki/Kongress_der_Völker_des_Ostens" target="_blank">Kongress der Völker des Ostens</a> 1920 in Baku (132).</li>
   <li><a href="https://en.wikipedia.org/wiki/Roger_Nash_Baldwin" target="_blank"><strong>Baldwin, Roger</strong></a> (1884–1981) 266, 272 <br />
   Amerikanischer Bürgerrechtler, Mitgründer der
   <a href="https://de.wikipedia.org/wiki/American_Civil_Liberties_Union" target="_blank">American Civil Liberties Union</a> (ACLU), Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927.</li>
   <li><strong>Bamatter, Siegfried</strong> (Sigi) (1892–1966) 68, 170, 191, 231, 537 <br />
-Schweizer Teilnehmer am II. Weltkongress der Komintern, Funktionär
-beim <em>Westeuropäischen Büro (WEB)</em>,
-<a href="https://hls-dhs-dss.ch/de/articles/016360" target="_blank">Kurzbiographie</a>
-in: <em>Historisches Lexikon der Schweiz</em>.</li>
+Schweizer Kommunist; Teilnehmer am II. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>
+(68) – Funktionär beim Westeuropäischen Büro (WEB) (170) – später
+Karriere in der Sowjetunion (191); siehe auch
+<a href="https://hls-dhs-dss.ch/de/articles/016360" target="_blank">Kurzbiographie</a> in: <em>Historisches Lexikon der Schweiz</em>.</li>
   <li><a href="https://fr.wikipedia.org/wiki/Henri_Barbé" target="_blank"><strong>Barbé, Henri</strong></a>
   (1902–1966) 167 <br />	
-  Funktionär beim <em>Westeuropäischen Büro (WEB)</em>.</li>
+  Französischer Kommunist; Funktionär beim Westeuropäischen Büro (WEB)
+  der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (167) – 1929–1931 Parteichef der <a href="https://de.wikipedia.org/wiki/Parti_communiste_français" target="_blank">PCF</a> (167) – Mann
+  Stalins in der PCF (167).</li>
   <li><span id="barbusse"></span><a href="https://de.wikipedia.org/wiki/Henri_Barbusse" target="_blank"><strong>Barbusse, Henri</strong></a> 
   (1873–1935) 208, 252, 266, 267, 275, 367, 395, 399, 400, 407, 464 <br />
-  Französischer Schriftsteller, Präsident des <em>Comité Pro-Hindou</em>,
+  Französischer Schriftsteller, Präsident des <em>Comité Pro-Hindou</em> (208) –
   Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927, Präsident des von
   <a href="studerM#münzenberg">→Münzenberg</a> organisierten internationalen
   Verteidigungskomitees für die in China verhafteten
@@ -66,7 +70,8 @@ in: <em>Historisches Lexikon der Schweiz</em>.</li>
   <a href="studerZ#zörgiebel">→Karl Zörgiebel</a>.</li>
   <li><a href="https://de.wikipedia.org/wiki/Max_Barthel" target="_blank"><strong>Barthel, Max</strong></a> 
   (1893–1975) 76, 96 <br />
-  Kommunistischer „Arbeiterdichter“, später Nationalsozialist.</li>
+  Kommunistischer „Arbeiterdichter“, später Nationalsozialist;
+  Teilnehmer am II. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (76, 96)</li>
   <li><a href="https://en.wikipedia.org/wiki/Carleton_Beals" target="_blank"><strong>Beals, Carleton</strong></a>
   (1893–1979) 276 <br />
   Amerikanischer Journalist, der Fotos beisteuerte zum Bericht „Bei dem
@@ -83,9 +88,10 @@ in: <em>Historisches Lexikon der Schweiz</em>.</li>
   (1895–1936) 471 <br />
   Deutscher Kommunist, organisierte Freiwillige für die spanische Republik.</li>
   <li><span id="benario"></span><a href="https://de.wikipedia.org/wiki/Olga_Benario-Prestes" target="_blank"><strong>Benario, Olga</strong></a> (1908–1942) 173 <br />
-  Instrukteurin der <em>Kommunistischen Jugendinternationale</em>, die nach dem
-  gescheiterten kommunistischen Aufstand 1935 in Brasilien an die
-  Gestapo ausgeliefert und 1942 vergast wurde; Frau von
+  Deutsche Kommunistin; Instrukteurin der Kommunistischen
+  Jugendinternationale, die nach dem gescheiterten kommunistischen
+  Aufstand 1935 in Brasilien an die Gestapo ausgeliefert und 1942
+  vergast wurde (173f) –  Frau von
   <a href="studerPQ#prestes">→Luís Carlos Prestes</a>.</li>
   <li><a href="https://de.wikipedia.org/wiki/Georg_Bernhard" target="_blank"><strong>Bernhard, Georg</strong></a>
   (1875–1944) 392, 412 <br />
@@ -101,8 +107,9 @@ in: <em>Historisches Lexikon der Schweiz</em>.</li>
   <a href="https://de.wikipedia.org/wiki/Otdel_meschdunarodnych_swjasei" target="_blank"><em>OMS</em></a>, Frau von <a href="studerA#abramow">→Alexandr Abramow</a>.</li>
   <li><a href="https://de.wikipedia.org/wiki/Jan_Karlowitsch_Bersin" target="_blank"><strong>Berzin, Jan</strong></a>
   (1889–1938) »Yan Karlovich Berzin« 139 <br />
-  kurz Generalsekretär der Komintern, finanzierte als solcher u.a.
-  <a href="studerR#reich">→Jakov Reich</a>.</li>
+  Lettisch-russischer Kommunist; kurz Generalsekretär der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>,
+  finanzierte als solcher u.a.  <a href="studerR#reich">→Jakov Reich</a>
+  (139).</li>
   <li><strong>Besouchet, Alberto</strong> (1904–1938?) 513, 514 <br />
   Brasilianischer Kommunist, Freiwilliger der internationalen Brigaden,
   von <a href="studerM#modotti">→Tina Modotti</a> als „Trotzkist“
@@ -162,9 +169,9 @@ Heft 3.</li>
   Polnische-deutsche Architektin, Frau von <a href="studerB#Bloch">→Ernst Bloch</a>.</li>
   <li><a href="https://de.wikipedia.org/wiki/Rosa_Bloch" target="_blank"><strong>Bloch, Rosa</strong></a>
   (1880–1922) 9, 132 <br />	
-  Schweizer Kommunistin, die sich gegen die Annäherung der Komintern an
-  <a href="studerPQ#pascha">→Enver Pascha</a> auf dem
-  <a href="https://de.wikipedia.org/wiki/Kongress_der_Völker_des_Ostens" target="_blank">Kongress der Völker des Ostens</a> in Baku 1920 wandte.</li>
+  Schweizer Kommunistin; wandte sich gegen die Annäherung der Komintern an
+  <a href="studerPQ#pascha">→Enver Pascha</a> auf dem 
+  <a href="https://de.wikipedia.org/wiki/Kongress_der_Völker_des_Ostens" target="_blank">Kongress der Völker des Ostens</a> 1920 in Baku (132).</li>
   <li><a href="https://de.wikipedia.org/wiki/Léon_Blum" target="_blank"><strong>Blum, Léon</strong></a> 
   (1872–1950) 467 <br />
   Französischer Premierminister während des spanischen Bürgerkriegs.</li>
@@ -175,23 +182,29 @@ Heft 3.</li>
   in Zürich.</li>
   <li><a href="https://de.wikipedia.org/wiki/Amadeo_Bordiga" target="_blank"><strong>Bordiga, Amadeo</strong></a> 
   (1889–1970) 91, 93 <br />
-  Teilnehmer am II. Weltkongress der Komintern, wollte dort eine
-  Verschärfung der Aufnahmebedingungen in die Komintern.</li>
+  Italienischer Kommunist; 
+  Teilnehmer am II. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>, wollte dort eine
+  Verschärfung der Aufnahmebedingungen in die Komintern (91, 93).</li>
   <li><span id="borodin"></span><a href="https://de.wikipedia.org/wiki/Michail_Markowitsch_Borodin" target="_blank"><strong><em>Borodin, Michail</em></strong></a> (1884–1951) »Bankier«, »Brantwein«, »George
   Brown«, »Bao« 30, 59, 60, 64, 106, 143, 203, 279, 282, 300–304, 306, 307
   313–315, 317, 319–322, 324–326, 338, 343, 387, 459, 527, 530, 543, 551 <br />
-  Russischer Komintern-Funktionär, 1920 war er (auf der Durchreise)
-  Mitgründer der mexikanischen und der spanischen KP, wichtige Rolle in
+  Russischer Kommunist; Foto (60) – 1920 war er (auf der Durchreise)
+  Mitgründer der mexikanischen (106) und der spanischen KP und
+  organisierte „in der halben Welt“ Delegierte für den II. Weltkongress
+  der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (60, 64) –  Mitorganisator des Westeuropäischen Sekretariats
+  der Komintern (143) – wichtige Rolle in
   China 1923 bis 1927. Borodin wurde 1949 verhaftet und starb in einem
   sibirischen Lager.</li>
   <li><strong>Boros, László</strong> (1895–1938) 181, 186, 423 <br />
-  Ungarischer Korrespondent für
-  <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> in der
-  Sowjetunion.</li>
+  Ungarischer Kommunist; Korrespondent für <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> in der
+  Sowjetunion (181) – 1919 für die
+  <a href="https://de.wikipedia.org/wiki/Föderative_Ungarische_Sozialistische_Räterepublik" target="_blank">Ungarische Räterepublik</a> tätig (186) – 1933–1935 Moskauer
+  Korrespondent der <em>Rundschau</em>, der deutschen Ausgabe der Inprekorr nach
+  1933 (423).</li>
   <li><a href="https://de.wikipedia.org/wiki/Heinrich_Brandler" target="_blank"><strong>Brandler, Heinrich</strong></a>
   (1881–1967) 158, 159, 166, 193 <br />
-  Kopf der
-  <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei-Opposition" target="_blank">KPD-Opposition</a>.</li>
+  Deutscher Kommunist; Kopf der
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei-Opposition" target="_blank">KPD-Opposition</a> (158).</li>
   <li><strong>Bratman-Brodovskijs, Stefan</strong> (1880–1937) 449	<br />
   Sowjetischer Botschaftsrat in Berlin, siehe
   <a href="https://www.bundesarchiv.de/aktenreichskanzlei/1919-1933/0000/adr/adrag/kap1_2/para2_284.html" target="_blank">Eintrag über Bratman-Brodowski, Stefan</a> in: <em>Akten der
@@ -203,12 +216,12 @@ Heft 3.</li>
   Frunse-Militärakademie später als OMS-Mitarbeiter in Shanghai.</li>
   <li><span id="braunthal"></span><a href="https://de.wikipedia.org/wiki/Bertha_Braunthal" target="_blank"><strong>Braunthal, Berta</strong></a> 
   (1887–1967) 186 <br />
-  Österreichisch-deutsche Kommunistin, arbeitet für die englische
-  Ausgabe der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a>.</li>
+  Österreichisch-deutsche Kommunistin; arbeitet für die englische
+  Ausgabe der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> (186).</li>
   <li><strong>Brecher, Ludovic</strong> <a href="studerD#dolivet">→Dolivet, Louis</a></li>
   <li><a href="https://de.wikipedia.org/wiki/Bertolt_Brecht" target="_blank"><strong>Brecht, Bertolt</strong></a>
   (1898–1956) 201, 223, 234, 261 <br />
-  Brechts Lehrstück
+  Verfasser des Texts des <em>Solidaritätslieds</em> (201) – Brechts Lehrstück
   <a href="https://de.wikipedia.org/wiki/Die_Maßnahme_(Drama)" target="_blank">Die
   Maßnahme</a> beruht auf den Erfahrungen von <a href="studerE#eislerg">→Gerhart Eisler</a> in China, es besingt <em>kommunistischen</em> Opfermut, was
   eigentlich eine
@@ -219,7 +232,7 @@ Heft 3.</li>
   Weltkomitees gegen Krieg und Faschismus.</li>
   <li><a href="https://de.wikipedia.org/wiki/Walther_Bringolf" target="_blank"><strong>Bringolf, Walther</strong></a>
   (1895–1981) 64, 72, 79 <br />
-  Schweizer Delegierter beim II. Weltkongress der Komintern.</li>
+  Schweizer Kommunist, später Sozialdemokrat; Schweizer Delegierter beim II. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (64, 72, 79).</li>
   <li><a href="https://de.wikipedia.org/wiki/Fenner_Brockway" target="_blank"><strong>Brockway, Fenner</strong></a>
   (1888–1988) 268 <br />
   Als Generalsekretär der britischen
@@ -253,29 +266,32 @@ Heft 3.</li>
   Schweizer Kommunist, der Freiwillige darin unterstütze, von Paris nach
   Spanien zu kommen.</li>
   <li><span id="brupbacher"></span><a href="https://de.wikipedia.org/wiki/Fritz_Brupbacher" target="_blank"><strong>Brupbacher, Fritz</strong></a>
-  (1874–1945) 64, 159, 193, 213, 215, 231 <br />
-  Schweizer Arzt und libertärer Sozialist, <em>enfant terrible</em> der KPS.</li>
-  <li><span id="brupacherp"></span><a href="https://de.wikipedia.org/wiki/Paulette_Brupbacher" target="_blank"><strong>Brupbacher-Raygrodski, Paulette</strong></a>	(1880–1967) 159, 193, 215, 394, 539 <br />
-  Schweizer Ärztin und Sozialreformerin, Frau von <a href="studerB#brupbacher">→Fritz Brupbacher</a>, Freundin von m4slink(<code class="language-plaintext highlighter-rouge">G', </code>gross’,
-  Babette Gross).</li>
+  (1874–1945) 64, 159, 193, 213, 215, 231, 394, 539 <br />
+  Schweizer Arzt und libertärer Sozialist; Freund und Mentor von
+  <a href="studerM#münzenberg">→Willi Münzenberg</a> (64, 215, 394, 539) –  <em>enfant terrible</em> der
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_der_Schweiz" target="_blank">KPS</a> (193) – 1933 aus der KPS ausgeschlossen (159).</li>
+  <li><span id="brupacherp"></span><a href="https://de.wikipedia.org/wiki/Paulette_Brupbacher" target="_blank"><strong>Brupbacher-Raygrodski, Paulette</strong></a>	(1880–1967) 159, 193, 215, 539 <br />
+  Schweizer Ärztin und Sozialreformerin; Frau von <a href="studerB#brupbacher">→Fritz Brupbacher</a> (159) – 
+  Freundin von <a href="studerG#gross">→Babette Gross</a> (215, 539).</li>
   <li><strong>Brutzkus, Berta</strong> (1887–1965) 144, 150 	<br />
-  Jüdische Ärztin aus Memel, erste Ehefrau von <a href="studerR#reich">→ Jakov Reich</a>.</li>
+  Jüdische Ärztin aus Memel; erste Ehefrau von <a href="studerR#reich">→
+  Jakov Reich</a> (143).</li>
   <li><a href="https://de.wikipedia.org/wiki/Louise_Bryant" target="_blank"><strong>Bryant, Louise</strong></a>
   (1885–1936) 132 <br />
-  Witwe von <a href="studerR#reed">→John Reed</a>, Kritikerin des Kurses der
-  Komintern auf dem
-  <a href="https://de.wikipedia.org/wiki/Kongress_der_Völker_des_Ostens" target="_blank">Kongress der Völker des Ostens</a> als Opportunismus gegenüber dem
-  islamischen Dschihad.</li>
+  Witwe von <a href="studerR#reed">→John Reed</a>; Kritikerin des Kurses der
+  Komintern auf dem <a href="https://de.wikipedia.org/wiki/Kongress_der_Völker_des_Ostens" target="_blank">Kongress der Völker des Ostens</a> 1920 in Baku als Opportunismus gegenüber dem isalmischen Dschihad (132).</li>
   <li><a href="https://de.wikipedia.org/wiki/Martin_Buber" target="_blank"><strong>Buber, Martin</strong></a>
   (1878–1975) 393 <br />
-  Jüdischer Religionsphilosoph, Schwiegervater von <a href="studerB#buber-neumann">→Margarete Buber-Neumann</a>, half m4slink(<code class="language-plaintext highlighter-rouge">M', </code>münzenberg’, `Willi Münzenberg’) und 
+  Jüdischer Religionsphilosoph, Schwiegervater von <a href="studerB#buber-neumann">→Margarete Buber-Neumann</a>, half 
+  <a href="studerM#münzenberg">→Willi Münzenberg</a> und 
   <a href="studerG#gross">→Babette Gross</a> bei der Flucht vor den Nazis.</li>
   <li><span id="buber-neumann"></span><a href="https://de.wikipedia.org/wiki/Margarete_Buber-Neumann" target="_blank"><strong><em>Buber-Neumann, Margarete</em></strong></a> (geb. Thüring) (1901–1989) »Elsa Henk« 30,
   183, 186, 187, 189–191, 193, 194, 196–198, 211, 214, 216, 217, 223,
   227, 228, 232, 270, 271, 282, 349, 364, 392, 425–427, 432, 433,
   435–437, 440, 441, 443, 449, 450, 451, 530, 543, 549 <br />
-  Mitarbeiterin der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a>, 
-  Teilnehmerin am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927, auch im Auftrag der
+  Deutsche Kommunistin, später Publizistin; Mitarbeiterin der
+  <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> (183ff) – Foto (183) – Partnerin von <a href="studerN#neumann">→Heinz Neumann</a> (191, 194) – Teilnehmerin am m4bruesselerk, auch im Auftrag
+  der
   <a href="https://de.wikipedia.org/wiki/Otdel_meschdunarodnych_swjasei" target="_blank">OMS</a> tätig, in Spanien für die Intwernationalen Brigaden tätig, 1933
   Emigration zusammen mit <a href="studerN#neumann">→Heinz Neumann</a> in
   die Sowjetunion, wo sie 1938 verhaftet und zu Zwangsarbeit verurteilt
@@ -283,6 +299,12 @@ Heft 3.</li>
   Ravensbrück knapp überlebte.</li>
   <li><span id="bucharin"></span><a href="https://de.wikipedia.org/wiki/Nikolai_Iwanowitsch_Bucharin" target="_blank"><strong>Bucharin, Nikolai</strong></a> (1888–1938) 83, 88, 93, 114, 156, 165, 192, 317,
   326, 331, 333, 342, 444, 541, 549, 553 <br />
+  13 Delegierte des II. Weltkongresses der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>, gehörten später
+  der Opposition um Bucharin an (83) – Foto (88) – schrieb Bescheinigung
+  für <a href="studerR#roy">→Roys</a> Auftrag in Taschkent (114) – Bucharin führte
+  auf
+  dem II. Weltkongress das Thema »Partizipation von Kommunisten an
+  Parlamenten und Gewerkschaften« ein (93) – 
   <a href="studerN#neumann">→Heinz Neumann</a> spielte eine Rolle bei der
   Eliminierung von Bucharin 1929 als „Rechtsabweichler“.</li>
   <li><span id="bullejos"></span><a href="https://en.wikipedia.org/wiki/José_Bullejos" target="_blank"><strong>Bullejos, José</strong></a> (1899–1977) 461, 462 <br />
