--- a/studer/studerC.html
+++ b/studer/studerC.html
@@ -37,8 +37,8 @@
   <a href="https://de.wikipedia.org/wiki/Partido_Obrero_de_Unificación_Marxista" target="_blank">POUM</a> gestürzt und durch <a href="studerN#negrin">→Juan Negrin</a>
   abgelöst.</li>
   <li><span id="cachin"></span><a href="https://de.wikipedia.org/wiki/Marcel_Cachin" target="_blank"><strong>Cachin, Marcel</strong></a>, (1869–1958) 70, 76–78 <br />
-  Französischer Sozialdemokrat, Teilnehmer am II. Weltkongress der
-  Komintern, galt dort als unverbesserlicher Chauvinist.</li>
+  Französischer Sozialdemokrat; Teilnehmer am II. Weltkongress der
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (70, 75, 76–78) – galt dort als unverbesserlicher Chauvinist (70).</li>
   <li><strong>Cai, Hesen</strong> (1895–1931) 301 <br />
   Parteiführer der <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Chinas" target="_blank">KPCh</a> in den 1920er Jahren und Mitglied des EKKI-Präsidiums.</li>
   <li><span id="capa"></span><a href="https://de.wikipedia.org/wiki/Robert_Capa" target="_blank"><strong>Capa, Robert</strong></a>
@@ -67,11 +67,12 @@
   <li><a href="https://de.wikipedia.org/wiki/Virendranath_Chattopadhyaya" target="_blank"><strong><em>Chattopadhyaya, Virendranath</em></strong></a> (1880–1937) »Chatto« 30, 65, 66,
   119, 206, 264, 265, 275, 278, 282, 283, 286, 294, 334, 381, 387, 543
   <br />
-  Indischer Journalist, Vertreter des Berliner Indischen Revolutionären
-  Komitees in den Verhandlungen des Komitees mit der Komintern, in der
-  Vertretung Indiens in Konflikt bei der Komintern mit <a href="studerR#roy">→Roy</a>; später 
-  führendes Mitglied der
-  <a href="https://de.wikipedia.org/wiki/Liga_gegen_den_Imperialismus" target="_blank">Liga gegen den Imperialismus</a>. Chatto wanderte 1931 in die
+  Indischer anitkolonialistischer Journalist; Vertreter des Berliner
+  Indischen Revolutionären Komitees in den Verhandlungen des Komitees
+  mit der Komintern, in der Vertretung Indiens in Konflikt bei der
+  Komintern mit <a href="studerR#roy">→Roy</a> (119) –  später führendes
+  Mitglied der <a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus" target="_blank">Liga gegen Imperialismus und für nationale Unabhängigkeit</a>.
+  Chatto wanderte 1931 in die
   Sowjetunion aus, 1937 in Moskau verhaftet und erschossen.</li>
   <li><strong>Chauvet, Jean</strong> »Jean Léar« (1903–?) 491, 492	<br />
   Sekretär der französischen
@@ -82,8 +83,11 @@
   <a href="https://de.wikipedia.org/wiki/Partido_Comunista_de_España" target="_blank">PCE</a>.</li>
   <li><span id="cheifec"></span><a href="https://de.wikipedia.org/wiki/August_Kleine" target="_blank"><strong>Cheifec, Abram</strong></a>
   (Gural’skij, Avgust) (1890–1960) »August Kleine«, »Lepetit« 154, 168, 247 <br />
-  Supervisor der <a href="https://de.wikipedia.org/wiki/Otdel_meschdunarodnych_swjasei" target="_blank">OMS</a> von
-  <a href="studerR#reich">→Jakov Reich’</a>, Mitglied des internationalen Kolonialbüros der Komintern in Paris.</li>
+  Lettisch-russischer Kommunist; Supervisor der <a href="https://de.wikipedia.org/wiki/Otdel_meschdunarodnych_swjasei" target="_blank">OMS</a> von
+  <a href="studerR#reich">→Jakov Reich</a> in der Leitung des
+  Westeuropäischen Sekretariats (154) – EKKI-Berater bei der <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Deutschlands" target="_blank">KPD</a> (168)
+  –  Mitglied des internationalen Kolonialbüros der Komintern in Paris
+  (247).</li>
   <li><a href="https://de.wikipedia.org/wiki/Chen_Duxiu" target="_blank"><strong>Chen Duxiu</strong></a> (1879–1942) 306, 307, 532 <br />
   Gründungsmitglied der
   <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Chinas" target="_blank">KPCh</a>, Kritiker der Einheitsfrontpolitik mit der
@@ -95,12 +99,14 @@
   Bekämpfung der Kommunisten (318, 332).</li>
   <li><a href="https://de.wikipedia.org/wiki/Georgi_Wassiljewitsch_Tschitscherin" target="_blank"><strong>Čičerin, Georgij Vasiljevič</strong></a>
   1872–1936) 87, 97, 119 <br />
-  Sowjetischer Volkskommissar für auswärtige Angelegenheiten 1918–1930,
+  Sowjetischer Volkskommissar für auswärtige Angelegenheiten 1918–1930 (87) – 
   erklärte in der <em>New York Times</em>, dass Sowjetrussland nur in den
-  ersten Jahren eine Politik der Weltrevolution verfolgt habe.</li>
+  ersten Jahren eine Politik der Weltrevolution verfolgt habe (119).</li>
   <li><strong>Clark, William</strong> »Willie« 186, 422	<br />
-  arbeitete mit seiner Frau <a href="studerB#braunthal">→Berta Braunthal</a> für die englische Ausgabe von 
-  <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a>.</li>
+  arbeitete mit seiner Frau <a href="studerB#braunthal">→Berta Braunthal</a>
+  für die englische Ausgabe der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> (186) – nach 1933
+  Chefredakteur der <em>International Press Correspondence</em> in London
+  (422).</li>
   <li><a href="https://de.wikipedia.org/wiki/Claud_Cockburn" target="_blank"><strong>Cockburn, Claud</strong></a> (1903–1981) 466	<br />
   schrieb unter dem Pseudonym »Frank Pitcairn« für die britische kommunistische
   Zeitung <a href="https://en.wikipedia.org/wiki/Morning_Star_(British_newspaper)" target="_blank">Daily Worker</a> und für
@@ -110,12 +116,14 @@
   Mitarbeiter im illegalen Apparat der
   <a href="https://de.wikipedia.org/wiki/Otdel_meschdunarodnych_swjasei" target="_blank">OMS</a> in Spanien.</li>
   <li><span id="codovilla"></span><strong>Codovilla, Victorio</strong> (1894–1970) »Medina«, »Luis/Louis«, »Tomas«
-  165, 192, 460, 462, 486, 495, 517, 519, 520 <br />
-  Italio-argentinischer Kommunist, leitete das lateinamerikanische
-  Sekretariat der Komintern in Montevideo, später im Auftrag des EKKI in
-  Spanien die „autoritäre éminence grise der Partei“; in Meldungen
+  164, 192, 460, 462, 486, 495, 517, 519, 520 <br />
+  Italio-argentinischer Kommunist; ab 1927 Mitarbeiter der
+  lateinamerikanischen und der britisch-amerikanischen
+  Ländersekretariate des EKKI (164) – leitete das lateinamerikanische
+  Sekretariat der Komintern in Montevideo (192) – später im Auftrag des EKKI in
+  Spanien die „autoritäre éminence grise der Partei“ (460, 462) – in Meldungen
   <a href="studerT#togliatti">→Togliattis</a> an die Komintern charakterlich
-  negativ gezeichnet.</li>
+  negativ gezeichnet (517, 519f).</li>
   <li><a href="https://de.wikipedia.org/wiki/Rose_Cohen" target="_blank"><strong>Cohen, Rose</strong></a>
   (1894–1937) 281 <br />	
   Britische Kommunistin, Frau von <a href="studerPQ#petrovskij">→David
@@ -140,8 +148,8 @@
   <a href="https://de.wikipedia.org/wiki/Reichstagsbrand#Der_Reichstagsbrandprozess" target="_blank">Reichtagsbrandprozess</a> der Nazis organisierte.</li>
   <li><a href="https://de.wikipedia.org/wiki/Arthur_Crispien" target="_blank"><strong>Crispien, Arthur</strong></a>
   (1875–1946) 70, 91	<br />
-  Deutscher Politiker, als Vertreter des rechten Flügels der
-  <a href="https://de.wikipedia.org/wiki/Unabhängige_Sozialdemokratische_Partei_Deutschlands" target="_blank">USPD</a> auf dem II. Weltkongress der Komintern.</li>
+  Deutscher Sozialdemokrat; als Vertreter des rechten Flügels der
+  <a href="https://de.wikipedia.org/wiki/Unabhängige_Sozialdemokratische_Partei_Deutschlands" target="_blank">USPD</a> auf dem II. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (70, 91).</li>
 </ul>
 
 <!-- previous and next page -->
