--- a/studer/studerD.html
+++ b/studer/studerD.html
@@ -33,33 +33,43 @@
   <li><a href="https://de.wikipedia.org/wiki/Franz_Dahlem" target="_blank"><strong>Dahlem, Franz</strong></a>
   (1892–1981) »Joseph Raber«, »Johann Mathys« 181, 365, 483, 484, 504,
   520, 522, 523 <br />
-  Redakteur der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a>, politische Leitung der Militärbasis der Komintern in
-  Albacete.</li>
+  Deutscher Kommunist; Redakteur der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> (181) –
+  in der politischen Leitung der Militärbasis der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> in
+  Albacete als Leiter der »Abteilung Abwehr- und Gegenerarbeit« der
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Deutschlands" target="_blank">KPD</a> (483f) – konstatierte in persönlichen Notizen eine
+  »Spionage-Psychose« der Komintern in den Internationalen Brigaden
+  (504).</li>
   <li><span id="diaz"></span><a href="https://en.wikipedia.org/wiki/José_D%C3%ADaz_(politician)" target="_blank"><strong>Díaz, José</strong></a>
   (1895–1942) 461, 462, 486, 496, 515	<br />
   Linientreuer Generalsekretär der
   <a href="https://de.wikipedia.org/wiki/Partido_Comunista_de_España" target="_blank">PCE</a> nach der Absetzung von <a href="studerB#bullejos">→José
   Bullejos</a>.</li>
   <li><strong>Dieschbourg, Michel</strong> (1899–1965) »Hollay« 186, 422, 424, 431 <br />
-  Redakteur der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a>, 
-  illegal in der Schweiz für die <em>Rundschau über Politik, Wirtschaft und
-  Arbeiterbewegung</em> tätig.</li>
+  Luxemburger Kommunist; Redakteur der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> (186) – 
+   nach 1933 illegal in der Schweiz für die <em>Rundschau</em> tätig (422, 424)
+   – in Lausanne 1935 verhaftet (431); siehe auch
+   <a href="https://maitron.fr/spip.php?article50936" target="_blank">Kurzbiographie</a> in: <em>Le Maitron, Dictionnaire biographique mouvement ouvrier, mouvement social</em>.</li>
   <li><a href="https://de.wikipedia.org/wiki/Marlene_Dietrich" target="_blank"><strong>Dietrich, Marlene</strong></a>
   (1901–1992) 403	<br />
-  Marlene Dietrch soll <a href="studerK#katz">→Otto Katz</a> Geld geliehen haben.</li>
+  Marlene Dietrich soll <a href="studerK#katz">→Otto Katz</a> Geld geliehen haben.</li>
   <li><span id="dimitrov"></span><a href="https://de.wikipedia.org/wiki/Georgi_Dimitroff" target="_blank"><strong>Dimitrov, Georgi</strong></a>
   (1882–1949) »Dr. Rudolf Hediger« 28, 166, 167, 171, 175, 177, 182,
   191, 202, 211, 212, 214, 225, 361, 363, 389, 402, 405, 407, 408, 413,
   415, 456, 458, 489, 495, 515, 516, 529, 532, 553	<br />
-  Leiter des westeuropäischen Büros (WEB) der Komintern, Angeklagter im
+  Bulgarischer Kommunist; Spitzenfunktionär der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (28) – Leiter
+  des westeuropäischen Büros (WEB) der Komintern (166) – Foto (167) –
+  sollte 1928 in Berlin den Ausschluss von <a href="studerB#brandler">→Heinrich
+  Brandler</a> und
+  <a href="studerT#thalheimer">→August Thalheimer</a> überwachen (166) –
+  Angeklagter im
   <a href="https://de.wikipedia.org/wiki/Reichstagsbrand#Der_Reichstagsbrandprozess" target="_blank">Reichtagsbrandprozess</a>, später Generalsekretär der Komintern. Er
   verkündet auf dem 7. Weltkongress der Komintern den Schwenk zur
   Volksfrontpolitik und kritisiert auf Basis der neuen „Linie“ die
   <a href="https://de.wikipedia.org/wiki/Internationale_Rote_Hilfe'" target="_blank">IRH</a> als „sektiererisch“.</li>
   <li><a href="https://de.wikipedia.org/wiki/Wilhelm_Dittmann" target="_blank"><strong>Dittmann, Wilhelm</strong></a>
   (1874–1954) 70, 72, 91 	<br />
-  Vertreter des rechten Flügels der
-  <a href="https://de.wikipedia.org/wiki/Unabhängige_Sozialdemokratische_Partei_Deutschlands" target="_blank">USPD</a> auf dem II. Weltkongress der Komintern.</li>
+  Deutscher Sozialdemokrat; Vertreter des rechten Flügels der
+  <a href="https://de.wikipedia.org/wiki/Unabhängige_Sozialdemokratische_Partei_Deutschlands" target="_blank">USPD</a> auf dem II. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (70, 72, 91).</li>
   <li><strong>Dobos, László</strong> <a href="studerG#gibarti">→Gibarti, Louis</a></li>
   <li><span id="dolivet"></span><a href="https://de.wikipedia.org/wiki/Louis_Dolivet" target="_blank">Dolivet, Louis</a> (geb. Ludovic Brecher) (1908–1989) »Udeanu« 399, 400<br />
   Vertrauter <a href="studerM#münzenberg">→Münzenbergs</a>, im Auftrag der
@@ -76,8 +86,9 @@
   Noce</a> aufnahm, als diese 1936 nach Spanien ging.</li>
   <li><a href="https://de.wikipedia.org/wiki/Jacques_Doriot" target="_blank"><strong>Doriot, Jacques</strong></a>
   (1898–1945) 168, 247, 248, 290, 308, 309, 313–315, 321 <br />
-  Mitglied der <a href="https://de.wikipedia.org/wiki/Parti_communiste_français" target="_blank"><strong>PCF</strong></a> und schon mit 23 Jahren des EKKI; mit <a href="studerR#roy">→Roy</a> ab 1927 in China. Später wurde Doriot Faschist und
-  Kollaborateur der Nazis.</li>
+  Französischer Kommunist; Foto (248) – schon mit 23 Jahren Mitglied des EKKI (247) – 
+  mit <a href="studerR#roy">→Roy</a> ab 1927 in China (290, 308f, 313ff) –
+  später wurde Doriot Faschist und Kollaborateur der Nazis (247).</li>
   <li><a href="https://de.wikipedia.org/wiki/John_Dos_Passos" target="_blank"><strong>Dos Passos, John</strong></a>
   (1896–1970) 465, 466 <br />
   Amerikanischer Schriftsteller, der mit am Skript schrieb für den Film
@@ -91,9 +102,8 @@
   Faschismus.</li>
   <li><a href="https://de.wikipedia.org/wiki/Jacques_Duclos" target="_blank"><strong>Duclos, Jacques</strong></a>
   (1896–1975) 167 <br />
-  1928 Verbindungsmann der
-  <a href="https://de.wikipedia.org/wiki/Parti_communiste_français" target="_blank">PCF</a>
-  beim Westeuropäischen Büro <em>WEB</em> der Komintern.</li>
+  Französischer Kommunist; 1928 Verbindungsmann der <a href="https://de.wikipedia.org/wiki/Parti_communiste_français" target="_blank">PCF</a>
+  beim Westeuropäischen Büro (WEB) der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>.</li>
   <li><strong>Ducroux, Joseph</strong> (1904–1980) »Jacques Dupont«, »Serge Lefranc« 348, 349, 
   351–354, 387 <br />
   Französischer Kommunist, schrieb für die
