--- a/studer/studerE.html
+++ b/studer/studerE.html
@@ -34,10 +34,10 @@
   <li><span id="eberlein"></span><a href="https://de.wikipedia.org/wiki/Hugo_Eberlein" target="_blank"><strong>Eberlein, Hugo</strong></a>
   (1887–1941) »Daniel Nielsen«, »Ernst« 19, 171, 360, 422, 431, 451 <br />
   Deutscher Kommunist; Vertreter der KPD beim Gründungskongress der
-  Komintern mit dem Mandat gegen die Gründung, weil verfrüht, zu stimmen
-  (19), Vorsitzender
-  der Revisionskommission des Westeuorpäischen Komitees (WEB) der
-  Komintern; 1928 als Verwalter von Komintern-Geldern in Shanghai; auch
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> mit dem Mandat gegen die Gründung, weil verfrüht, zu stimmen
+  (19) –  Vorsitzender
+  der Revisionskommission des Westeuropäischen Komitees (WEB) der
+  Komintern (171) – 1928 als Verwalter von Komintern-Geldern in Shanghai; auch
   zuständig für die Finanzen der Pressewesens der Komintern; 1937 in
   Moskau inhaftiert.</li>
   <li><span id="eichenwald"></span><a href="https://de.wikipedia.org/wiki/Fritz_Eichenwald" target="_blank"><strong>Eichenwald, Fritz</strong></a>
@@ -55,16 +55,17 @@
   seine Frau <a href="studerM#moissenko">→Tat’jana Moissenko</a>).</li>
   <li><strong>Eisler, Elfriede</strong> <a href="studerF#fischerr">→Fischer, Ruth</a></li>
   <li><span id="esilerg"></span><a href="https://de.wikipedia.org/wiki/Gerhart_Eisler" target="_blank"><strong>Eisler, Gerhart</strong></a> (1897–1968) »Robert« 201, 261, 341, 343, 346 <br />
-  Redakteur der <a href="https://de.wikipedia.org/wiki/Die_Rote_Fahne" target="_blank"><em>Roten Fahne</em></a>;
+  Österreichisch-deutscher Kommunist; Redakteur der 
+  <a href="https://de.wikipedia.org/wiki/Die_Rote_Fahne" target="_blank"><em>Roten Fahne</em></a> (201) – 
   auf Eislers Erfahrungen in China beruht <a href="studerB#brecht">→Brechts</a>
   <a href="https://de.wikipedia.org/wiki/Die_Maßnahme_(Drama)" target="_blank"><em>Die
   Maßnahme</em></a>, das sein Bruder <a href="studerE#eislerh">→Hanns Eisler</a>
   vertonte.</li>
   <li><span id="eislerh"></span><a href="https://de.wikipedia.org/wiki/Hanns_Eisler" target="_blank"><strong>Eisler, Hanns</strong></a> (1898–1962) 201, 234, 261<br />
-  Komponist der Musik zum <em>Lied der Komintern</em> und zum
-  <a href="https://de.wikipedia.org/wiki/Solidaritätslied" target="_blank"><em>Solidaritätslied</em></a>, Vertonung von
+  Österreichischer Komponist; komponierte die Musik zum <em>Lied der Komintern</em> und zum
+  <a href="https://de.wikipedia.org/wiki/Solidaritätslied" target="_blank"><em>Solidaritätslied</em></a> (201) –  Vertonung von
   <a href="https://de.wikipedia.org/wiki/Die_Maßnahme_(Drama)" target="_blank"><em>Die
-  Maßnahme</em></a> von <a href="studerB#brecht">→Brecht</a>.</li>
+  Maßnahme</em></a> von <a href="studerB#brecht">→Brecht</a> (261).</li>
   <li><strong>El Bakri, Mazhar Bey</strong> 270 <br />
   Syrischer Antikolonialist, Gast bei <a href="studerM#münzenberg">→Münzenberg</a> und
   <a href="studerG#gross">→Gross</a>.</li>
@@ -84,9 +85,9 @@
   Sowjetischer Schriftsteller, im Auftrag der <em>Iswestija</em> 1936 in Spanien.</li>
   <li><a href="https://en.wikipedia.org/wiki/Ernestine_Evans" target="_blank"><strong>Evans, Ernestine</strong></a>
   (1889–1967) 128 <br />
-  Amerikanische Journalistin, berichtet dass <a href="studerR#roy">→M. N. Roy</a> und m4slink(<code class="language-plaintext highlighter-rouge">R', </code>roye’, `Evelyn Roy’) als Dozenten an
-  der
-  <a href="https://de.wikipedia.org/wiki/Kommunistische_Universität_der_Werktätigen_des_Ostens" target="_blank">Kommunistischen Universität der Werktätigen des Ostens</a> tätig waren.</li>
+  Amerikanische Journalistin, berichtet dass <a href="studerR#roy">→M. N. Roy</a> und 
+  <a href="studerR#roye">→Evelyn Roy</a> als Dozenten an der
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Universität_der_Werktätigen_des_Ostens" target="_blank">Kommunistischen Universität der Werktätigen des Ostens</a> tätig waren (128).</li>
   <li><span id="ewert"></span><a href="https://de.wikipedia.org/wiki/Arthur_Ewert" target="_blank"><strong>Ewert, Arthur</strong></a>
   (1890–1959) »Harry Berger« 357, 371, 372, 374–377, 379, 386, 533 <br />
   Deutscher Kommunist, Vertreter des EKKI in China, 1934 von China
