--- a/studer/studerF.html
+++ b/studer/studerF.html
@@ -63,9 +63,10 @@
   Internationalen Schriftstellerkongress zur Verteidigung der Kultur.</li>
   <li><span id="fischerr"></span><a href="https://de.wikipedia.org/wiki/Ruth_Fischer" target="_blank"><strong>Fischer, Ruth</strong></a> (geb. Elfriede Eisler) (1895–1961) »Liliane-Edith Bosshardt« 
   140, 146, 152, 195, 201, 216, 363, 394 <br />
-  Gründerin der
-  <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Österreichs" target="_blank">österreichischen KP</a>; Schwester von <a href="studerE#eislerh">→Hanns
-  Eisler</a> und <a href="studerE#eislerg">→Gerhart Eisler</a>; floh 1933
+  Österreichische Kommunistin; Gründerin der
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Österreichs" target="_blank">KPÖ</a> (146)
+  –  Schwester von <a href="studerE#eislerh">→Hanns
+  Eisler</a> und <a href="studerE#eislerg">→Gerhart Eisler</a> (201) –  floh 1933
   zusammen mit <a href="studerM#maslow">→Arkadi Maslow</a> nach Paris.</li>
   <li><a href="https://de.wikipedia.org/wiki/Harry_Fisher_(Gewerkschafter)" target="_blank"><strong>Fisher, Harry</strong></a>
   (1911–2003) 482 <br />
@@ -73,11 +74,13 @@
   Jugendverbands <em>Young Cimmunist League</em>; schloss sich in Spanien den
   internationalen Brigaden an.</li>
   <li><strong>Fitingov, Roza</strong> 117 <br />	
-  Russische Kommunistin, Mitarbeiterin in Lenins Privatsekretariat, Mitgründerin der 
-  <a href="https://de.wikipedia.org/wiki/Communist_Party_of_India" target="_blank"><strong>indischen kommunistischen Partei</strong></a>.</li>
-  <li><strong>Fitzgerald, Edward</strong> (1902–1966) »Edward Gerhardt« 187, 188, 196, 212, 217, 547 <br />
-  Irischer Kommunist, Mitarbeiter der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a>, verheiratet mit
-  <a href="studerK#kramer">→Hilde Kramer</a>.</li>
+  Russische Kommunistin; Mitarbeiterin in Lenins Privatsekretariat, Mitgründerin der 
+  <a href="https://de.wikipedia.org/wiki/Communist_Party_of_India" target="_blank"><strong>indischen kommunistischen Partei</strong></a> (117) (117).</li>
+  <li><span id="fitzgerald"></span><strong>Fitzgerald, Edward</strong> (1902–1966) »Edward
+  Gerhardt« 187, 188, 196, 212, 217, 547 <br />
+  Irischer Kommunist; Mitarbeiter der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> (187f) –  verheiratet
+  mit <a href="studerK#kramer">→Hilde Kramer</a> (187) – verließ 1933
+  Detuschland und lebte dann illegal in Amsterdam (547).</li>
   <li><a href="https://de.wikipedia.org/wiki/Wilhelm_Florin" target="_blank"><strong>Florin, Wilhelm</strong></a>
   (1894–1944) 441, 442, 458 <br />
   Deutscher Kommunist, Vertreter der KPD beim EKKI; befürwortete die
@@ -95,14 +98,14 @@
   Slowakischer Kommunist, Kominternemmisionär bei der
   <a href="https://de.wikipedia.org/wiki/Parti_communiste_français" target="_blank">PCF</a>, 1943 wahrscheinlich von den Nazis in Brüssel ermordet.</li>
   <li><a href="https://de.wikipedia.org/wiki/Paul_Friedländer_(Journalist)" target="_blank"><strong>Friedländer, Paul</strong></a> (1891–1941) 186 <br />
-  Österreichischer kommunistischer Journalist, Redakteur der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a>.</li>
+  Österreichischer kommunistischer Journalist; Redakteur der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> (186).</li>
   <li><strong>Friedmann, Endre Ernö</strong> <a href="studerC#capa">→Capa, Robert</a></li>
   <li><a href="https://fr.wikipedia.org/wiki/Ludovic-Oscar_Frossard" target="_blank"><strong>Frossard, Louis-Oscar</strong></a>
   (1889–1946) 70, 82 <br />
-  Französischer Sozialist, Teilnehmer am II. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>.</li>
+  Französischer Sozialist; Teilnehmer am II. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (70) – Foto (82).</li>
   <li><a href="https://de.wikipedia.org/wiki/Eduard_Fuchs_(Kulturwissenschaftler)" target="_blank"><strong>Fuchs, Eduard</strong></a> (1870–1940) 67, 152 <br />
-  Vertreter des <a href="https://de.wikipedia.org/wiki/Spartakusbund" target="_blank">Spartakusbunds</a> beim II. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>, Finanzwart der
-  <a href="https://de.wikipedia.org/wiki/Internationale_Arbeiterhilfe" target="_blank">IAH</a>.</li>
+  Vertreter des <a href="https://de.wikipedia.org/wiki/Spartakusbund" target="_blank">Spartakusbunds</a> beim II. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (67) – Finanzwart der
+  <a href="https://de.wikipedia.org/wiki/Internationale_Arbeiterhilfe" target="_blank">IAH</a> (152).</li>
   <li><a href="https://de.wikipedia.org/wiki/Jakub_Ganezki" target="_blank"><strong>Fürstenberg, Jakub</strong></a>
   (1879–1937) »Jakub Hanecki«, »Jakub Ganeckij« 138 <br />
   Polnischer Revolutionär, 1919 Hauptkommissar der russischen Staatsbank
