--- a/studer/studerG.html
+++ b/studer/studerG.html
@@ -30,8 +30,10 @@
       <h2 id="g">G</h2>
 
 <ul>
+  <li><strong>Gaillard, Mireille</strong> <a href="studerG#glaubaufm">→Glaubauf, Mireille</a></li>
   <li><a href="https://de.wikipedia.org/wiki/Mohandas_Karamchand_Gandhi" target="_blank"><strong>Gandhi, Mahatma</strong></a> (1869–1948) 204, 266 <br />
-  Gandhi sandte ein Glückwunschtelegramm an den »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927.</li>
+  Gandhi wurde von <a href="studerR#roye">→Evelyn Trent Roy</a> kritisiert (204) –
+  sandte ein Glückwunschtelegramm an den »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 (266).</li>
   <li><a href="https://de.wikipedia.org/wiki/Marcus_Garvey" target="_blank"><strong>Garvey, Marcus</strong></a>
   (1887–1940) 273 <br />
   Der jamaikanische Panafrikanist Garvey hielt die Bezeichnung „Farbige“
@@ -47,17 +49,18 @@
   Brigaden beteiligt war.</li>
   <li><span id="geisenberg"></span><strong>Geisenberg, Cilly</strong> (1895–1963) 159, 217, 401 <br />	
   Freundin von <a href="studerK#kramer">→Hilde Kramer</a>, mit ihr und
-  <a href="studerO#oesterreich">→Ruth Oesterreich</a> 1929 aus der m4kpd
-  ausgeschlossen; Geliebte von <a href="studerV#vassart">→Albert
+  <a href="studerO#oesterreich">→Ruth Oesterreich</a> 1929 aus der 
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Deutschlands" target="_blank">KPD</a> ausgeschlossen (159) –  Geliebte von <a href="studerV#vassart">→Albert
   Vassart</a>; Mitarbeiterin des Weltfrauenkomitees gegen Krieg und
   Faschismus.</li>
   <li><span id="geissler"></span><strong>Geissler, Luise</strong> (1899–1973) 
   209, 210, 214, 301, 308, 309, 311, 313, 327, 333, 334, 530, 534 <br />	
-  Deutsche Kommunistin, Mitglied des Aktionsausschusses der Münchner
-  Räterepublik, tätig für die KPen in der Schweiz, Österreich, ab 1921
+  Deutsche Kommunistin; Mitglied des Aktionsausschusses der Münchner
+  Räterepublik (209) –  tätig für die KPen in der Schweiz, Österreich (210) –  ab 1921
   tätig im Moskauer <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>-Apparat auch mit geheimen Aufträgen in
-  Deutschland und den USA; Gefährtin von <a href="studerR#roy">→Roy</a> 1927
-  in China.</li>
+  Deutschland und den USA (210) – lebte in Moskau kurz mit (<a href="studerL#levien">→Max Levien</a> zusammen (210) – Gefährtin von 
+  <a href="studerR#roy">→Roy</a> 1927
+  in China (209).</li>
   <li><a href="https://de.wikipedia.org/wiki/Martha_Gellhorn" target="_blank"><strong>Gellhorn, Martha</strong></a>
   (1908–1998) 466 <br />
   Amerikanische Journalistin, Berichterstatterin für
@@ -84,26 +87,28 @@
   <li><a href="	https://de.wikipedia.org/wiki/José_Mar%C3%ADa_Gil-Robles_y_Quiñones" target="_blank"><strong>Gil-Robles, José María</strong></a> (1898–1980) 518 <br />
   Spanischer Politiker, in dessen ehemaligem Büro <a href="studerC#codovilla">→Victorio Codovilla</a> die spanische KP leitete.</li>
   <li><span id="glaubauf"></span><strong>Glaubauf, Hans</strong> (1901–1942) 185, 188, 533 <br />
-  Österreichischer Kommunist, Mitarbeiter der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a>; 1940 von der
-  Gestapo in Paris verhaftet und 1942 in Berlin-Plötzensee hingerichtet;
-  siehe auch
+  Österreichischer Kommunist; schrieb für <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> und die 
+  <a href="https://de.wikipedia.org/wiki/Bund_der_Freunde_der_Sowjetunion" target="_blank"><em>Freunde
+  der Sowjetunion</em></a> (185, 188) – 1940 von der Gestapo in Paris verhaftet
+  und 1942 in Berlin-Plötzensee hingerichtet (533); siehe auch
   <a href="http://www.hohenemsgenealogie.at/gen/getperson.php?personID=I24447&amp;tree=Hohenems" target="_blank">Kurzbiographie</a> in: <em>Hohenems Genealogie — Jüdische
   Familiengeschichte in Vorarlberg und Tirol</em>.</li>
-  <li><strong>Glaubauf, Mireille</strong> (geb. Gaillard) (1905–2000) 185 <br />
-  Französische Kommunistin, Mitarbeiterin der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a>; Frau von
-  <a href="studerG#glaubauf">→Hans Glaubauf</a>.</li>
+  <li><span id="glaubaufm"></span><strong>Glaubauf, Mireille</strong> (geb. Gaillard) (1905–2000) 185, 188 <br />
+  Französische Kommunistin; Mitarbeiterin der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> (185) – Frau
+  von <a href="studerG#glaubauf">→Hans Glaubauf</a> (188); siehe auch
+  <a href="https://maitron.fr/spip.php?article49973" target="_blank">Kurzbiographie</a> in: <em>Le Maitron, Dictionnaire biographique mouvement ouvrier, mouvement social</em>.</li>
   <li><a href="https://de.wikipedia.org/wiki/Max_Gohl" target="_blank"><strong>Gohl, Max</strong></a>
   (1886–1951) 197 <br />
-  Deutscher Kommunist, 1932 wegen seiner Mitarbeit bei der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a>
-  verhaftet und zu neun Monaten Festungshaft verurteilt.</li>
+  Deutscher Kommunist; 1932 wegen seiner Mitarbeit bei der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a>
+  verhaftet und zu neun Monaten Festungshaft verurteilt (197).</li>
   <li><strong>Goldenberg, Aron</strong> (1896–1993) 68 <br />
-  Rumänischer Kommunist, als Jugendvertreter aus Frankreich Teilnehmer
-  am II. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>.</li>
+  Rumänischer Kommunist; als Jugendvertreter aus Frankreich Teilnehmer
+  am II. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (68).</li>
   <li><a href="https://de.wikipedia.org/wiki/Maxim_Gorki" target="_blank"><strong>Gorki, Maxim</strong></a>
   (1868–1936) 76, 79, 367 <br />
   Gorki entwarf Szenen zu einem Schauspiel über die Geschichte der
   Menschheit, die vor dem II. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> aufgeführt
-  wurden. Gorki sandte ein Glückwunschschreiben an den »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927.</li>
+  wurden (76) –  Gorki sandte ein Glückwunschschreiben an den »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927.</li>
   <li><a href="https://en.wikipedia.org/wiki/Ellen_Gottschalk_Roy" target="_blank"><strong>Gottschalk, Ellen</strong></a>
   (1904–1960) 334, 547, 548 <br />
   Deutsche Kommunistin, Gefährtin von <a href="studerR#roy">→M. N. Roy</a>,
@@ -111,11 +116,12 @@
   durch die britische Kolonialmacht.</li>
   <li><a href="https://de.wikipedia.org/wiki/Klement_Gottwald" target="_blank"><strong>Gottwald, Klement</strong></a>
   (1896–1953) 168, 458 <br />
-  Tschechoslowakischer Kommunist, Präsidiumsmitglied des EKKI.</li>
+  Tschechoslowakischer Kommunist, Präsidiumsmitglied des EKKI (168) – Foto (458).</li>
   <li><a href="https://de.wikipedia.org/wiki/Antonio_Gramsci" target="_blank"><strong>Gramsci, Antonio</strong></a>
   (1891–1937) 148, 182 <br />
+  Italienischer Kommunist;
   <a href="studerIJ#jezierska">→Jenny Jezierska</a> traf Gramsci als
-  Mitarbeiterin des Westeuropäischen Sekretariats der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>.</li>
+  Mitarbeiterin des Westeuropäischen Sekretariats der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (148).</li>
   <li><a href="https://de.wikipedia.org/wiki/Josef_Romualdowitsch_Grigulewitsch" target="_blank"><strong>Grigulevič, Iosif</strong></a> (1913–1988) 473, 525 <br />
   Sowjetischer Agent litauischer Herkunft, 1936 in Spanien.</li>
   <li><strong>Grimm-Schlain, Rosa</strong> (1875–1955) 9 <br />
@@ -123,23 +129,26 @@
   und später zeitweise Angestellte der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> in Moskau (9); siehe
   auch <a href="https://rosalux-geneva.org/de/rosa-grimm/" target="_blank">»Rote Rosa
   Nr.1« – die revolutionäre Frau</a>.</li>
-  <li><span id="gröhl"></span> <a href="https://de.wikipedia.org/wiki/Karl_Retzlaw" target="_blank"><strong>Gröhl, Karl</strong></a> 
+  <li><span id="gröhl"></span><a href="https://de.wikipedia.org/wiki/Karl_Retzlaw" target="_blank"><strong>Gröhl, Karl</strong></a> 
   (später Retzlaw) (1896–1979) »Karl Friedberg« 143, 147, 149, 150, 151,
   155, 157, 159, 416, 417, 418, 419, 420 <br />
-  Deutscher Kommunist, Mitarbeiter im Westeuropäischen Sekretariat der
-  <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>; Geschäftsführer des Komintern-Verlags Carl Hoym. Karl
+  Deutscher Kommunist; Mitarbeiter im Westeuropäischen Sekretariat der
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (147) –  Foto (149) – baute den illegalen Apparat der
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Deutschlands" target="_blank">KPD</a> und die Kampfformation der »Proletarischen Hundertschaften«,
+  später <a href="https://de.wikipedia.org/wiki/Roter_Frontkämpferbund" target="_blank">»Roter Frontkämpferbund«</a> (149) – Geschäftsführer des Komintern-Verlags
+  Carl Heym (150) – Karl
   Gröhl schloss sich 1933 der
-  <a href="https://de.wikipedia.org/wiki/Linke_Opposition_der_KPD" target="_blank">Linken Opposition</a> an. Ab 1933 Mitarbeiter von <a href="studerM#münzenberg">→Münzenberg</a> verantwortlich für den Vertrieb der <em>AIZ</em> in der
-  Schweiz.</li>
+  <a href="https://de.wikipedia.org/wiki/Linke_Opposition_der_KPD" target="_blank">Linken Opposition</a> an (159) –  ab 1933 Mitarbeiter von <a href="studerM#münzenberg">→Münzenberg</a> verantwortlich für den Vertrieb der <em>AIZ</em> in der
+  Schweiz (416) – in der Schweizer Partei Anfeindungen ausgesetzt (418) – verfolgt von der Kantonspolizei musste er die Schweiz verlassen (419).</li>
   <li><a href="https://de.wikipedia.org/wiki/Walter_Gropius" target="_blank"><strong>Gropius, Walter</strong></a>
   (1883–1969) 367 <br />
   Gropuis sandte ein Glückwunschschreiben an den m43buresselerk
   gegen koloniale Unterdrückung und Imperialismus
   1927.</li>
-  <li><span id="gross"></span><a href="https://de.wikipedia.org/wiki/Babette_Gross" target="_blank"><strong><em>Gross, Babette</em></strong></a> (1898–1990) 30, 139, 143, 153, 214, 215, 222, 223,
+  <li><span id="gross"></span><a href="https://de.wikipedia.org/wiki/Babette_Gross" target="_blank"><strong><em>Gross, Babette</em></strong></a> (1898–1990) 30, 139, 143, 153, 155, 214, 215, 222, 223,
   227, 267, 270, 280, 284, 391, 393, 395, 399, 405, 406, 413, 416, 417,
   420, 438, 454, 539, 549 <br />
-  Lebensgefährtin von <a href="studerM#münzenberg">→Willi Münzenberg</a>,
+  Deutsche Kommunistin, später Publizistin; Lebensgefährtin von <a href="studerM#münzenberg">→Willi Münzenberg</a> (139) – 
   Schwester von <a href="studerB#buber-neumann">→Margarete Buber-Neumann</a>;
   Geschäftsführerin des Neuen Deutschen Verlags. 1933 Flucht nach Paris,
   Verlagsleitung der
@@ -148,8 +157,8 @@
   Geschäftsleiterin der
   <a href="https://de.wikipedia.org/wiki/Frankfurter_Allgemeine_Zeitung" target="_blank">FAZ</a>.</li>
   <li><strong>Gruen, Josef</strong> (Pepi) 186, 196 <br />
-  Österreichischer Mitarbeiter der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a>, vorher Redakteur der
-  <em>Roten Fahne</em> in Wien.</li>
+  Österreichischer Kommunist; Mitarbeiter der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> (186) – vorher Redakteur der
+  <em>Roten Fahne</em> in Wien (196).</li>
   <li><strong>Gruzenberg, Michail</strong> <a href="studerB#borodin">→Borodin, Michail</a></li>
   <li><span id="gu"></span><a href="https://en.wikipedia.org/wiki/Gu_Shunzhang" target="_blank"><strong>Gu Shunzhang</strong></a>
   (1904–1935) 347 <br />
@@ -165,8 +174,8 @@
   <a href="https://www.bundesstiftung-aufarbeitung.de/de/recherche/kataloge-datenbanken/biographische-datenbanken/kaethe-guessfeld" target="_blank">Kurzbiographie</a> im <em>Handbuch der Deutschen Kommunisten</em>.</li>
   <li><a href="https://de.wikipedia.org/wiki/Richard_Gyptner" target="_blank"><strong>Gyptner, Richard</strong></a>
   (1901–1972) »Alarich«, »Magnus« 167, 175, 191 <br />
-  Deutscher Kommunist, Mitarbeiter des Westeuropäischen Büros der
-  <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>, später Karriere in der DDR.</li>
+  Deutscher Kommunist; Mitarbeiter des Westeuropäischen Büros der
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (167) – als solcher in der Schweiz (175) – später Karriere in der DDR (191).</li>
 </ul>
 
 <!-- previous and next page -->
