--- a/studer/studerH.html
+++ b/studer/studerH.html
@@ -33,9 +33,11 @@
   (1898-1974) 250, 267 <br />
   Algerisches Mitglied der <em>Union Intercoloniale</em>, Teilnehmer am
   »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 der m4ligaimp.</li>
+  <li><a href="https://de.wikipedia.org/wiki/Jakub_Ganezki" target="_blank"><strong>Hanecki, Jakub</strong></a>
+  (1879–1937) 138 <br />
+  Polnischer Kommunist; einer der Hauptfinanziers der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (138).</li>
   <li><strong>Hanum, Naǧiya</strong> (Najiya) 122, 123 <br />
-  Türkische Feministin, Teilnehmerin des
-  <a href="https://de.wikipedia.org/wiki/Kongress_der_Völker_des_Ostens" target="_blank">Kongresses der Völker des Ostens</a> 1920 in Baku.</li>
+  Türkische Feministin; Rednerin zur Frauenfrage beim <a href="https://de.wikipedia.org/wiki/Kongress_der_Völker_des_Ostens" target="_blank">Kongress der Völker des Ostens</a> 1920 in Baku (122f) – Foto (123).</li>
   <li><a href="https://en.wikipedia.org/wiki/George_Hardy_(communist)" target="_blank"><strong>Hardy, George</strong></a> (1884–1966) »George« 341 <br />
   Britischer Seemann und Gewerkschafter, im Auftrag der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> 1927 in China.</li>
   <li><a href="https://de.wikipedia.org/wiki/Mohammad_Hatta" target="_blank"><strong>Hatta, Mohammad</strong></a> 
@@ -50,11 +52,12 @@
   verhaftet worden waren.</li>
   <li><a href="https://de.wikipedia.org/wiki/Fritz_Heckert" target="_blank"><strong>Heckert, Fritz</strong></a>
   (1884–1936) 168 <br />
-  Verbindungsmann der <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Deutschlands" target="_blank">KPD</a> beim Westeuropäischen Büro (WEB) der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>.</li>
+  Deutscher Kommunist;
+  Verbindungsmann der <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Deutschlands" target="_blank">KPD</a> beim Westeuropäischen Büro (WEB) der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (168).</li>
   <li><strong>Heimo, Mauno</strong> (1894–1937) 160 <br />
-  Finnischer Kommunist, lange Geschäftsführer des EKKI-Sekretariats,
+  Finnischer Kommunist; lange Geschäftsführer des EKKI-Sekretariats (160) –
   1937 zusammen mit seiner Frau, einer Amerikanerin lettischer Herkunft,
-  verhaftet und erschossen.</li>
+  verhaftet und erschossen (160).</li>
   <li><a href="https://de.wikipedia.org/wiki/Wolfgang_Heine" target="_blank"><strong>Heine, Wolfgang</strong></a>
   (1861–1944) 392 <br />
   Sozialdemokratischer Politiker, Redner auf der von <a href="studerM#münzenberg">→Münzenberg</a> organisierten antifaschistischen
@@ -80,20 +83,21 @@
   <a href="https://www.e-periodica.ch/cntmng?pid=szg-006:1991:41::697" target="_blank">Schweizer Spanienkämpfer in den Fängen des NKWD</a>, von Peter Huber
   in: Schweizerische Zeitschrift für Geschichte 41(1991) Heft 3.</li>
   <li><strong>Herzog, Jakob</strong> (1892–1931) »Joggi« 93 <br />
+  Schweizer Kommunist; 
   Gründer der ersten kommunistischen Partei in der Schweiz, der
-  »Altkommunisten«, siehe auch
-  <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_der_Schweiz" target="_blank">KPS (Wikipedia)</a>.</li>
+  »Altkommunisten« (93); siehe auch <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_der_Schweiz" target="_blank">KPS</a>.</li>
   <li><a href="https://de.wikipedia.org/wiki/Nâzım_Hikmet" target="_blank"><strong>Hikmet, Nazım</strong></a>
   (1902–1963) 26, 27 <br />
-  Türkischer Schriftsteller, einer der ersten Schüler der
+  Türkischer Dichter; einer der ersten Schüler der
   <a href="https://de.wikipedia.org/wiki/Kommunistische_Universität_der_Werktätigen_des_Ostens" target="_blank">Kommunistischen Universität der Werktätigen des Ostens</a>; stark
-  autobiografischer Roman: <em>Die Romantiker</em>, Frankfurt am Main 2012.</li>
+  autobiografischer Roman: <em>Die Romantiker</em>, Frankfurt am Main 2012, dort Passage zum Thema »Konspiration« (26f).</li>
   <li><strong>Hirdman, Einar</strong> 550 <br />
   Schwede, verheiratet mit <a href="studerS#stenbock">→Charlotte Stenbock-Fermor</a>.</li>
   <li><a href="https://de.wikipedia.org/wiki/Magnus_Hirschfeld" target="_blank"><strong>Hirschfeld, Magnus</strong></a>
   (1868–1935) 214, 215, 393 <br />
-  Deutscher Sexualwissenschaftler, in dessen Haus <a href="studerM#mümzenberg">→Willi Münzenberg</a>, m4slink(<code class="language-plaintext highlighter-rouge">G', </code>gross’, `Babette
-  Gross’), <a href="studerB#buber-neumann">→Margarete Buber-Neumann</a> und
+  Deutscher Sexualwissenschaftler, in dessen Haus <a href="studerM#mümzenberg">→Willi Münzenberg</a>, 
+  <a href="studerG#gross">→Babette Gross</a>, 
+  <a href="studerB#buber-neumann">→Margarete Buber-Neumann</a> und
   <a href="studerN#neumann">→Heinz Neumann</a> eine Zeitlang wohnten;
   Hirschfelds Institut für Sexualwissenscahft wurde 1933 von
   faschistischen Studenten zerstört.</li>
@@ -125,26 +129,36 @@
   »Walcki« (1877–1938) 410 <br />
   Polnischer Kommunist, von der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> beauftragt, <a href="studerM#münzenberg">→Münzenberg</a> zu kontrollieren.</li>
   <li><a href="https://en.wikipedia.org/wiki/Otto_Huiswoud" target="_blank"><strong>Huiswood, Otto</strong></a>
-  (1893–1961) 102 <br />
-  In Surinam geborener amerikanischer Kommunist, erster schwarzer
-  Delegierter beim 4. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>.</li>
+  (1893–1961) 102, 103 <br />
+  In Surinam geborener amerikanischer Kommunist; erster schwarzer
+  Delegierter beim 4. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (102, 103).</li>
   <li><strong>Hümbelin, Charlotte</strong> (geb. Bindel) <a href="studerB#bindel">→Charlotte Bindel</a></li>
+  <li><a href="https://de.wikipedia.org/wiki/Jenny_Humbert-Droz" target="_blank"><strong><em>Humbert-Droz, Jenny</em></strong></a>
+  (1892–2000) 30, 65, 67, 129, 130, 162–165, 365, 423, 425, 438, 461,
+  530, 532, 535, 539, 550 <br />
+  Schweizer Kommunistin; Gefährtin (und Ehefrau) von Jules Humbert-Droz (30) – mit ihm 1921–1931 in Moskau im Hotel Lux (129).</li>
   <li><span id="humbert"></span><a href="https://de.wikipedia.org/wiki/Jules_Humbert-Droz" target="_blank"><strong><em>Humbert-Droz, Jules</em></strong></a>
   (1891–1971) »Bauer« 9, 22, 30, 59, 60, 64, 65, 67, 86, 89, 91, 93,
   129–131, 148, 155, 160, 162, 164, 165, 168, 191–193, 229, 365, 425,
   438, 441, 460, 461, 479, 510, 511, 529, 531, 532, 535, 537, 539, 540,
   549, 550 <br />
   Schweizer Kommunist; Vertreter des linken Flügels der Schweizer
-  Sozialdemokratie auf dem II. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>, 1921 beim III.
-  Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> zu einem von drei Sekretären des EKKI gewählt (22),
-  Mitgründer der <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_der_Schweiz" target="_blank">KPS</a>, sympathisierte mit <a href="studerB#bucharin">→Bucharin</a> und kritisierte den ultralinken Kurs der m4komintern ab
-  1928 und die schwindende interne Demokratie, als Emmissär in Spanien,
-  1943 wurde Humbert-Droz aus der <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_der_Schweiz" target="_blank">KPS</a> ausgeschlossen, später
-  Zentralsekretär der Sozialdemokratischen Partei der Schweiz.</li>
-  <li><a href="https://de.wikipedia.org/wiki/Jenny_Humbert-Droz" target="_blank"><strong><em>Humbert-Droz, Jenny</em></strong></a>
-  (1892–2000) 30, 65, 67, 129, 130, 162–165, 365, 423, 425, 438, 461,
-  530, 532, 535, 539, 550 <br />
-  Schweizer Kommunistin, Gefährtin (und Ehefrau) von Jules Humbert-Droz.</li>
+  Sozialdemokratie auf dem II. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (60, 64f,
+  86) – Foto (89) – wollte eine Verschärfung der Aufnahmebedingungen in
+  die Komintern (91) – ließ sich von <a href="studerB#bucharin">→Bucharin</a> in
+  der Frage der Partizipation an Parlamenten überzeugen (93) – 1921 beim
+  III.  Weltkongress der Komintern zu einem von drei Sekretären des EKKI
+  gewählt (22, 129) – 1924 Kominternemissär in Italien (148) –
+  Mitgründer der <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_der_Schweiz" target="_blank">KPS</a> – als Kominternsekretär Anfang der 1920er Jahre
+  gegen die »Trotzkisten« aktiv (160, 165) – 1927 einer der ersten Mitarbeit
+  des Westeuropäischen Büros WEB der Komintern in Berlin (162ff) –
+  sympathisierte mit <a href="studerB#bucharin">→Bucharin</a> und
+  kritisierte den ultralinken Kurs der Komintern ab 1928 und die
+  schwindende interne Demokratie (192) – beugte sich der Kritik der
+  Kominternführung an seiner »Abweichung« (193) –  als Emmissär in
+  Spanien, 1943 wurde
+  Humbert-Droz aus der <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_der_Schweiz" target="_blank">KPS</a> ausgeschlossen, später Zentralsekretär der
+  Sozialdemokratischen Partei der Schweiz.</li>
   <li><a href="https://de.wikipedia.org/wiki/Rudolf_Jakob_Humm" target="_blank"><strong>Humm, Rudolf Jakob</strong></a>
   (1895–1977) 417, 420 <br />
   Schweizer Schriftsteller, der 1932 am Amsterdamer Friedenskongress
