--- a/studer/studerIJ.html
+++ b/studer/studerIJ.html
@@ -60,14 +60,14 @@
   <li><a href="https://de.wikipedia.org/wiki/Dschaʿfar_Pischewari" target="_blank"><strong>Ja‘far Javazadeh, Mir</strong></a>
   (1892–1947) 111 <br />
   Ja‘far Javazadeh ist der Geburtsname von Seyyed Dscha‘far Pischewari,
-  iranisch-aserbeidschanischer Kommunist, Delegierter beim 3.
-  Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>.</li>
+  iranisch-aserbeidschanischer Kommunist; Delegierter beim 3.
+  Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (111).</li>
   <li><a href="https://de.wikipedia.org/wiki/Lotte_Jacobi" target="_blank"><strong>Jacobi, Lotte</strong></a>
   (1896–1990) 524 <br />
   Deutsche Fotografin, Freundin von <a href="studerM#modotti">→Tina Modotti</a>.</li>
   <li><span id="jahnke"></span><strong>Jahnke, Franz</strong> 201 <br />
-  Zusammen mit <a href="studerV#vallentin">→Maxim Vallentin</a> Autor des
-  Textes des <em>Lieds der Komintern</em>.</li>
+  Deutscher Kommunist; zusammen mit <a href="studerV#vallentin">→Maxim
+  Vallentin</a> Autor des Textes des <em>Lieds der Komintern</em> (201).</li>
   <li><a href="https://de.wikipedia.org/wiki/Paul_Jäkel" target="_blank"><strong>Jäkel, Paul</strong></a>
   (1890–1943) »Jan Dietrich« 451 <br />
   Deutscher Kommunist, ab 1934 in Moskau bei der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> für die
@@ -76,8 +76,7 @@
   <li><strong>Jansen, Jan</strong> (i.W. W. Jan Proost) (1890–1943) [laut
   <a href="https://nl.wikipedia.org/wiki/Johannes_Proost" target="_blank">Kurzbiographie</a> in der niederländischen Wikipedia 1882–1942) 111,
   129<br />
-  Niederländischer Kunstmaler, Teilnehmer des
-  <a href="https://de.wikipedia.org/wiki/Kongress_der_Völker_des_Ostens" target="_blank">Kongresses der Völker des Ostens</a> 1920 in Baku.</li>
+  Niederländischer Kunstmaler; Teilnehmer am <a href="https://de.wikipedia.org/wiki/Kongress_der_Völker_des_Ostens" target="_blank">Kongress der Völker des Ostens</a> 1920 in Baku (111, 129).</li>
   <li><a href="https://fr.wikipedia.org/wiki/Guy_Jerram" target="_blank"><strong>Jerram, Guy, Mérédith</strong></a> 
   (1896–1951) 400 <br />
   Französischer Kommunist, Mitglied in der Leitung des <em>Weltkomitees
@@ -88,11 +87,16 @@ Freundin von Fraz Kafka, mit <a href="studerB#buber-neumann">→Margarete
 Buber-Neumann</a> im KZ Ravensbrück, wo sie 1944 starb.</li>
   <li><span id="jezierska"></span><strong>Jezierska, Fanny</strong> (1887–1945)
   147, 148, 151, 159, 181, 213 <br />
-  Polnische Kommunistin, Redakteurin der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a>; nach dem Bruch mit
+  Polnische Kommunistin; Mitarbeiterin im Westeuropäischen Sekretariat
+  der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (147) – Sekretärin von <a href="studerL#luxemburg">→Rosa
+  Luxemburg</a> (148) – hielt Kontakte zu italienischen 
+  Kommunisten (147) – nach dem Bruch
+  mit
   der <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Deutschlands" target="_blank">KPD</a> Mitglied der
-  <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei-Opposition" target="_blank">KPD-O</a>; siehe auch die
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei-Opposition" target="_blank">KPD-O</a> (159, 213) – Mitarbeiterin der
+  <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> (181); siehe auch die
   <a href="https://www.kommunismusgeschichte.de/jhk/article/detail/fanny-thomas-jezierska-1887-1945-von-rosa-luxemburg-zu-gramsci-stalin-und-august-thalheimer-stationen-einer-internationalen-sozialistin" target="_blank">Biographie</a> von Ottokar Luban: <em>Fanny Thomas-Jezierska (1887–1945)
-  Von Rosa Luxemburg zu Gramsci, Stalin und August Thalheimer  —
+  Von Rosa Luxemburg zu Gramsci, Stalin und August Thalheimer –
   Stationen einer internationalen Sozialistin</em> in: Jahrbuch für
   Historische Kommunismusforschung, 2003.</li>
   <li><a href="https://de.wikipedia.org/wiki/Gusti_Jirku" target="_blank"><strong>Jirku, Gusti</strong></a> (später Stridsberg)
@@ -102,14 +106,14 @@ Buber-Neumann</a> im KZ Ravensbrück, wo sie 1944 starb.</li>
   <li><strong>Jordi, Fritz</strong> (1885–1938) 145 <br />
   Schweizer Kommunist, zusammen mit seinem Bruder Hans Gründer des
   Promachos-Verlags, der die Werke
-  führender Bolschewiki in Westeurpoa verlegte siehe
+  führender Bolschewiki in Westeurpoa verlegte (145);  siehe
   <a href="https://hls-dhs-dss.ch/de/articles/047596/2008-02-14/" target="_blank">Kurzbiographie</a> in <em>Historisches Lexikon der Schweiz</em>.</li>
   <li><strong>Jordi, Hans</strong> 145 <br />
-  Bruder von Fritz Jordi.</li>
+  Bruder von Fritz Jordi und Mitgründer des Promachos-Verlags (145).</li>
   <li><span id="jung"></span><a href="https://de.wikipedia.org/wiki/Franz_Jung" target="_blank"><strong>Jung, Franz</strong></a> (1888–1963) 69 <br /> 
-  Deutscher Schriftsteller und Politiker, zusammen mit <a href="studerA#appel">→Jan Appel</a>
+  Deutscher Schriftsteller und Politiker; zusammen mit <a href="studerA#appel">→Jan Appel</a>
   Vertreter der
-  <a href="https://de.wikipedia.org/wiki/Kommunistische_Arbeiterpartei_Deutschlands" target="_blank">KAPD</a> am II. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>.</li>
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Arbeiterpartei_Deutschlands" target="_blank">KAPD</a> am II. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (69).</li>
   <li><span id="jurr"></span><strong>Jurr, Hertha</strong> (geb. Sommerfeld) (1907–198?) 399 <br />
   Deutsche Kommunistin, Sekretärin von <a href="studerM#münzenberg">→Willi Münzenberg</a>.</li>
 </ul>
