--- a/studer/studerK.html
+++ b/studer/studerK.html
@@ -30,13 +30,14 @@
       <h2 id="k">K</h2>
 
 <ul>
-  <li><strong>Kaetzler, Frieda</strong> (eig. Frieda) (1898–1956) 190 <br />
-  Deutsche Kommunistin, Tochter von Gabriele Kaetzler und Freundin von
-  <a href="studerK#kramer">→Hilde Kramer</a>, Schreibkarft bei der
-  <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a>.</li>
+  <li><strong>Kaetzler, Frieda</strong> (eig. Frida) (1898–1956) 190 <br />
+  Deutsche Kommunistin; Tochter von Gabriele Kaetzler und Freundin von
+  <a href="studerK#kramer">→Hilde Kramer</a> – Schreibkraft bei der
+  <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> (190).</li>
   <li><strong>Kaetzler, Gabriele</strong> (1872–1954) 190 <br />
-  Deutsche Kommunistin, gab den letzten Anstoß für <a href="studerB#buber-neumann">→Margarete Buber-Neumann</a> sich der kommunistischen
-  Bewegung anzuschließen.</li>
+  Deutsche Kommunistin; nahm die Waise <a href="studerK#krame">→Hilde Kramer</a>
+  bei sich auf (190) – gab den letzten Anstoß für <a href="studerB#buber-neumann">→Margarete Buber-Neumann</a> sich der kommunistischen
+  Bewegung anzuschließen (190).</li>
   <li><strong>Kahn, Ruth</strong> <a href="studerM#martinez-cartonc">→Martínez Cartón, Carmen</a></li>
   <li><span id="kai-shek"></span><a href="https://de.wikipedia.org/wiki/Chiang_Kai-shek" target="_blank"><strong>Kai-shek, Chiang</strong></a> (1887-1975) 302, 305, 307, 310, 314–18, 332, 357,
   368, 369 <br />
@@ -109,31 +110,33 @@
   Teilnehmer am Zweiten Internationalen Schriftstellerkongress zur
   Verteidigung der Kultur 1937 in Spanien.</li>
   <li><strong>Kivilovič, M. M.</strong> 172 <br />
-  Verantwortlicher der Geschäftsleitung der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>.</li>
+  Verantwortlicher der Geschäftsleitung der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (172).</li>
   <li><a href="https://de.wikipedia.org/wiki/Paul_Klee" target="_blank"><strong>Klee, Paul</strong></a>
   (1879–1940) 367 <br />
   Klee beteiligte sich an der Kampagne zur Freilassung der in China
   verhafteten Komintern-Funktionäre <a href="studerM#moiseenko">→Tatjana
   Moiseenko-Velikaja</a> und <a href="studerR#rudnik">→Jakov Rudnik</a>.</li>
-  <li><strong>Knotin, Wilhelm</strong> (Vil’gel’m oder Vilhelms) (1890–1939) »Tischler« 166 <br />
-  Lettischer Kommunist, zeitweise verantwortlich für das Westeuropäische
-  Büro (WEB) der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>.</li>
+  <li><strong>Knorin, Wilhelm</strong> (Vil’gel’m oder Vilhelms) (1890–1939) »Tischler« 166 <br />
+  Lettischer Kommunist; zeitweise verantwortlich für das Westeuropäische
+  Büro WEB der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (166).</li>
   <li><a href="https://de.wikipedia.org/wiki/Hermann_Knüfken" target="_blank"><strong>Knüfken, Hermann</strong></a>
   (1893–1976) 69, 78, 86 <br />
-  Deutscher Kommunist, der 1920 durch die Entführung eines Fischdampfers
-  half, <a href="studerIJ#jung">→Franz Jung</a> und m4slink(<code class="language-plaintext highlighter-rouge">A', </code>appel’,
-  Jan Appel) zum II. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> in die Sowjetunion zu
-  bringen.</li>
+  Deutscher Kommunist; der 1920 durch die Entführung eines Fischdampfers
+  half, <a href="studerIJ#jung">→Franz Jung</a> und 
+  <a href="studerA#appel">→Jan Appel</a> zum II. Weltkongress der m4komintern in die Sowjetunion
+  zu bringen (69, 70, 78, 86) – wurde zurück in Deutschland verhaftet
+  und zu einer fünfjährigen Zuchthausstrafe verurteilt (69) – ab 1923
+  Leiter des Leningrader Internationalen Klubs der Seeleute (70).</li>
   <li><a href="https://en.wikipedia.org/wiki/Mikhail_Kobetsky" target="_blank"><strong>Kobeckij, Michail</strong></a>
   (1881–1937) 114 <br />
   Russischer Kommunist, Sekretär von <a href="studerB#bucharin">→Bucharin</a> als dieser stellvertretender Vorsitzenden des
-  EKKI-Präsidiums war.</li>
+  EKKI-Präsidiums war (114).</li>
   <li><a href="https://de.wikipedia.org/wiki/Arthur_Koestler" target="_blank"><strong>Koestler, Arthur</strong></a>
   (1905–1983) 201, 212, 213, 227, 395, 397, 404–406, 414, 427, 454, 465, 466 <br />
-  Deutscher Kommunist, der 1930 in der
-  <a href="https://de.wikipedia.org/wiki/Künstlerkolonie_Berlin" target="_blank"><strong>Künsterkolonie</strong></a> beim Laubenheiemer Platz wohnte; hielt mit
-  <a href="studerR#regler">→Gustav Regler</a> und m4slink(<code class="language-plaintext highlighter-rouge">S', </code>sperber’,
-  Manès Sperber) die Arbeit am
+  Deutscher Kommunist; voll des Lobs über die Musik <a href="studerE#eislerh">→Eisler</a>s (201) –  	wohnte 1930 in der
+  <a href="https://de.wikipedia.org/wiki/Künstlerkolonie_Berlin" target="_blank"><strong>Künsterkolonie</strong></a> beim Laubenheimer Platz (212f) –  hielt mit
+  <a href="studerR#regler">→Gustav Regler</a> und 
+  <a href="studerS#sperber">→Manès Sperber</a> die Arbeit am
   <a href="https://de.wikipedia.org/wiki/Braunbuch#Braunbuch_1933" target="_blank"><em>Braunbuch über Reichstagsbrand und Hitlerterror</em></a> literarisch fest;
   Kriegsberichterstatter im
   <a href="https://de.wikipedia.org/wiki/Spanischer_Bürgerkrieg" target="_blank">Spanischen Bürgerkrieg</a>.</li>
@@ -148,8 +151,8 @@
   exekutiert.</li>
   <li><span id="komjata"></span><a href="https://en.wikipedia.org/wiki/Aladár_Komját" target="_blank"><strong>Komját, Aladár</strong></a>
   (1891–1937) 185, 186, 190, 196, 197, 215, 232, 425, 430, 431 <br />
-  Ungarischer Kommunist, Mitarbeiter im engeren Kern der Redaktion der
-  <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a>; Vertreter des
+  Ungarischer Kommunist; Mitarbeiter im engeren Kern der Redaktion der
+  <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> (185f); Vertreter des
   <a href="https://de.wikipedia.org/wiki/Proletkult" target="_blank">Proletkults</a>;
   siehe auch
   <a href="'https://www.rosalux.de/fileadmin/rls_uploads/pdfs/Utopie_kreativ/102/102_Kebir.pdf'" target="_blank">Kurzbiographie</a> von Sabine Kerr: <em>Aladár Komját (1891-1936) – ein
@@ -157,12 +160,14 @@
   1999.</li>
   <li><span id="komjati"></span><strong>Komját-Rona, Irén</strong> (1895–1982), »Olga«, »Nora«, »Frau Stein« 181,
   185, 215, 280, 422, 423, 425, 430, 431, 545 <br />	
-  Ungarische Kommunistin, mit ihrem Mann Aladár Mitarbeiterin der
-  <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a>; schloss sich 1941 der französischen
+  Ungarische Kommunistin; mit ihrem Mann Aladár Mitarbeiterin der
+  <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> (181) – schloss sich 1941 der französischen
   <a href="https://de.wikipedia.org/wiki/Résistance" target="_blank">Résistance</a> an.</li>
   <li><a href="https://de.wikipedia.org/wiki/Viktor_Kopp" target="_blank"><strong>Kopp, Victor</strong></a> (Viktor) 
   (1880–1930) 68 <br />
-  Sowjetischer Diplomat in Berlin.</li>
+  Sowjetischer Diplomat in Berlin; gab <a href="studerR#roy">→Roy</a> die
+  Möglichkeit mit dem sowjetischen Passagierschiff <em>Die Sowjet</em> nach
+  Reval zu reisen, von wo es weiter zum II. Weltkongress ging (68).</li>
   <li><strong>Korpus, Lilly</strong> <a href="studerB#becherl">→Lilly Becher</a></li>
   <li><a href="https://de.wikipedia.org/wiki/Karl_Korsch" target="_blank"><strong>Korsch, Karl</strong></a>
   (1886–1961) 232, 329 <br />
@@ -180,17 +185,22 @@
   <li><span id="kramer"></span><a href="https://de.wikipedia.org/wiki/Hilde_Kramer-Fitzgerald" target="_blank"><strong><em>Kramer, Hilde</em></strong></a> (1900–1974) »Müller«, »Gretchen« 30, 58–60, 66–68,
   73, 75, 78, 83–87, 94–98, 104–105, 135, 143, 144, 150, 157–159, 187,
   188, 190, 217, 401, 530, 547 <br />
-  Deutsche Kommunistin, als Stenographin und Dolmetscherin beim II.
-  Weltkongresses der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>; von <a href="studerB#borodin">→Borodin</a> für das Westeuropäische Sekretariat der m4komintern
-  angeworben; Mitarbeiterin der Internationalen Roten Hilfe; 1929 als
-  »Rechtsabweichlerin« aus der <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Deutschlands" target="_blank">KPD</a> ausgeschlossen; konnte 1937 nach
-  England auswandern, wo sie sich später in der
-  <a href="https://de.wikipedia.org/wiki/Labour_Party" target="_blank">Labour Party</a>
-  engagierte.</li>
+  Deutsche Kommunistin; Aktivistin der
+  <a href="https://de.wikipedia.org/wiki/Münchner_Räterepublik" target="_blank">Münchner Räterepublik</a> (58) – Passfoto von Hilde Kramer (59) – als
+  Stenographin und Dolmetscherin beim II. Weltkongresses der
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (58ff, 73, 75, 78, 83–87, 94–98) – von <a href="studerB#borodin">→Borodin</a> für das Westeuropäische Sekretariat der
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> angeworben (143) – Mitarbeiterin der Internationalen Roten
+  Hilfe in Berlin (157) – 1929 als »Rechtsabweichlerin« aus der <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Deutschlands" target="_blank">KPD</a>
+  ausgeschlossen (158f) – Frau von <a href="studerF#fitzgerald">→Edward
+  Fitzgerald</a> (187)(187)  – konnte 1937 nach England auswandern, wo sie
+  sich
+  später in der <a href="https://de.wikipedia.org/wiki/Labour_Party" target="_blank">Labour Party</a> engagierte.</li>
   <li><strong>Kreps, Michail</strong> (1895–1937) 438<br />
   Sowjetischer Kommunist, 1953 Leiter des Verlagssektors.</li>
   <li><a href="https://de.wikipedia.org/wiki/Nikolai_Nikolajewitsch_Krestinski" target="_blank"><strong>Krestinskij. Nikolaj</strong></a> (1883–1938) 156 <br />
-  Russischer Kommunist, 1922–1930 sowjetischer Botschafter in Berlin.</li>
+  Russischer Kommunist, 1922–1930 sowjetischer Botschafter in Berlin;
+  untersuchte das Finanzgebaren von <a href="studerR#reich ">→Jakov Reich</a> als
+  Leiter des Westeuropäischen Sekretariats (156).</li>
   <li><strong>Krueger, Ani</strong> 211 <br />
   Geliebte von <a href="studerD#dimitrov">→Dimitrov</a>.</li>
   <li><span id="krumbein"></span><strong>Krumbein, Charles</strong> (1897–1947) »Stewart«, »Kennedy« 348 <br />
@@ -199,7 +209,7 @@
   <li><span id="kuczynski"></span><a href="https://de.wikipedia.org/wiki/Ruth_Werner" target="_blank"><strong><em>Kuczynski, Ursula</em></strong></a>
   (Ursula Hamburger) (1907–2000) »Ruth Werner«, »Sonja« 30, 339, 340,
   376–378, 380–382, 384, 385, 387, 530, 533, 551 <br />
-  Deutsche Kommunistin, mit ihrem Mann Rudolf Hamburger in Shanghai, wo
+  Deutsche Kommunistin; mit ihrem Mann Rudolf Hamburger in Shanghai, wo
   sie von <a href="studerS#sorge">→Richard Sorge</a> als Agentin des
   <a href="https://de.wikipedia.org/wiki/Glawnoje_Raswedywatelnoje_Uprawlenije" target="_blank">Nachrichtendiensts des sowjetischen Militärs</a> angeworben wurde;
   später Einsätze als Spionin in der Mandschurei, in Danzig, der Schweiz
@@ -212,28 +222,30 @@
   »Trotzkist« eingestuft.</li>
   <li><a href="https://de.wikipedia.org/wiki/Béla_Kun" target="_blank"><strong>Kun, Béla</strong></a>
   (1886–1938) 111, 151, 222, 398, 407, 415, 541, 543<br />
-  Ungarischer Kommunist, Teilnehmer am
-  <a href="https://de.wikipedia.org/wiki/Kongress_der_Völker_des_Ostens" target="_blank">Kongress der Völker des Ostens</a> 1920 in Baku; in den 1920er Jahren
-  als Emissär des EKKI in Deutschland; ab 1924 Leiter der
+  Ungarischer Kommunist; Teilnehmer am <a href="https://de.wikipedia.org/wiki/Kongress_der_Völker_des_Ostens" target="_blank">Kongress der Völker des Ostens</a> 1920 in Baku (111) – 
+  in den 1920er Jahren
+  als Emissär des EKKI in Deutschland (151) – ab 1924 Leiter der
   Agitprop-Abteilung der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>; 1938 in der Sowjetunion im Rahmen
   der stalinistischen Säuberungen erschossen.</li>
   <li><a href="https://de.wikipedia.org/wiki/Alfred_Kurella" target="_blank"><strong>Kurella, Alfred</strong></a>
   (1895–1975) 161, 162, 219, 221, 395, 400, 408<br />
-  Deutscher Kommunist, einer der Gründer der Kommunistischen Jugend in
-  Deutschland, tätig für die
-  <a href="https://de.wikipedia.org/wiki/Kommunistische_Jugendinternationale" target="_blank">Kommunistische Jugendinternationale</a>; Dozent an der
-  <a href="https://de.wikipedia.org/wiki/Marxistische_Arbeiterschule" target="_blank">Marxistischen Arbeiterschule</a>; stellvertretender Leiter
-  Agitprkp-Abteilung der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>; ab 1929 Chefredakteur der
-  <a href="https://de.wikipedia.org/wiki/Arbeiter-Illustrierte-Zeitung" target="_blank"><em>AIZ</em></a>; 1932 im Komintern-Auftrag in Paris; Mitglied der Leitung des
-  Weltkomitees gegen Krieg und Faschismus, als solches vom EKKI wegen
-  Zusammenarbeit mit Sozialdemokraten getadelt.</li>
+  Deutscher Kommunist; einer der Gründer der Kommunistischen Jugend in
+  Deutschland (161) – tätig für die
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Jugendinternationale" target="_blank">Kommunistische Jugendinternationale</a> (161) –<br />
+   Dozent an der
+<a href="https://de.wikipedia.org/wiki/Marxistische_Arbeiterschule" target="_blank">Marxistischen Arbeiterschule (MASCH)</a> (162) 
+  – stellvertretender Leiter der
+  Agitprop-Abteilung der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (161) – ab 1929 Chefredakteur der
+  <a href="https://de.wikipedia.org/wiki/Arbeiter-Illustrierte-Zeitung" target="_blank"><em>AIZ</em></a> (221) – 1932 im Komintern-Auftrag in Paris (395) – Mitglied der Leitung des
+  Weltkomitees gegen Krieg und Faschismus (400) – als solches vom EKKI wegen
+  Zusammenarbeit mit Sozialdemokraten getadelt (408).</li>
   <li><span id="kurella"></span><a href="https://de.wikipedia.org/wiki/Heinrich_Kurella" target="_blank"><strong><em>Kurella, Heinrich</em></strong></a> (1905–1937) »Schief« 30, 161, 184, 185, 189,
   190, 194, 196–198, 212, 217, 219, 220, 392, 422, 423, 425–427, 429,
   430, 432, 437, 440, 445–451, 543, 550 <br />
-  Deutscher Kommunist, Partner von <a href="studerS#stenbock">→Charlotte
-  Stenbock-Fermor</a>, Mitarbeiter von <a href="studerA#alpari">→Alpári</a>
-  bei der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a>; ab 1933 in der Schweiz tätigi und entwickelte
-  dort eine e´nge Freundschaft zu <a href="studerN#neumann">→Heinz
+  Deutscher Kommunist; Partner von <a href="studerS#stenbock">→Charlotte
+  Stenbock-Fermor</a> (30), Mitarbeiter von <a href="studerA#alpari">→Alpári</a>
+  bei der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> (184f) – 1931 zu einem Jahr Haft verurteilt (197) – ab 1933 in der Schweiz tätig und entwickelte
+  dort eine enge Freundschaft zu <a href="studerN#neumann">→Heinz
   Neumann</a>; emigrierte in die Sowjetunion, wo er in der
   Informationsabteilung des EKKI arbeitete; denunzierte, selbst
   »überprüft«, andere Genossen, was ihn jedoch vor der
@@ -241,8 +253,8 @@
   eigentlich Selbstbezichtigung, im Oktober 1937 wurde er erschossen.</li>
   <li><a href="https://de.wikipedia.org/wiki/Aino_Kuusinen" target="_blank"><strong>Kuusinen, Aino</strong></a>
   (1886–1970) 169, 173<br />
-  Finnische Kommunistin, Instrukteurin der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> in Japan und
-  in den USA.</li>
+  Finnische Kommunistin; Instrukteurin der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> in Japan und
+  in den USA (173).</li>
   <li><a href="https://de.wikipedia.org/wiki/Otto_Wille_Kuusinen" target="_blank"><strong>Kuusinen, Otto</strong></a>
   (1881–1964) 22, 165, 166, 231, 257, 333, 458, 522<br />
   Finnischer Kommunist; 1921 auf dem III. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> als Sekretär des EKKI angestellt (22),  griff
