--- a/studer/studerL.html
+++ b/studer/studerL.html
@@ -49,8 +49,8 @@
   Britischer Politiker der Labour Party, Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927.</li>
   <li><a href="https://en.wikipedia.org/wiki/Lucien_Laurat" target="_blank"><strong>Laurat, Lucien</strong></a>
   (1898–1973) 67 <br />
-  Österreichischer Marxist, Teilnehmer am II. Weltkongress der
-  <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>, siehe auch
+  Österreichischer Marxist; Teilnehmer am II. Weltkongress der
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (67) – siehe auch
   <a href="https://maitron.fr/spip.php?article75607" target="_blank">Kurzbiographie</a> in: <em>Le Maitron, Dictionnaire biographique mouvement ouvrier, mouvement social</em>.</li>
   <li><strong>Lefebvre, Raymonde</strong> (1912–2009) 485 <br />
   Französische Antifaschistin, zweite Frau von <a href="studerM#marty">→André Marty</a>, hatte in den Krankenhäusern der republikanischen
@@ -58,14 +58,17 @@
   <li><span id="lenin"></span><a href="https://de.wikipedia.org/wiki/Wladimir_Iljitsch_Lenin" target="_blank"><strong>Lenin, Vladimir</strong></a> (geb. Uljanov) (1870–1924) 15, 17, 18, 31, 47, 58,
   69, 74, 81, 82, 85, 88, 92, 93, 95, 102, 106, 107, 110, 117, 142, 145,
   224, 322, 407 <br />
-  Mit <a href="studerT#trotzki">→Trotzki</a> Autor des Gründungsmanifests der 
-  <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> 1919 (15, 17f), Lenins Buch
+  Mit <a href="studerT#trotzki">→Trotzki</a> Autor des Gründungsmanifests der
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> 1919 (15, 17f) – Lenins Buch
   <a href="https://de.wikipedia.org/wiki/Der_„Linke_Radikalismus“,_die_Kinderkrankheit_im_Kommunismus" target="_blank">Der „Linke Radikalismus“, die Kinderkrankheit im Kommunismus</a>
   bildete die Grundlage der Beschlüsse des II. Weltkongresses der
-  <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>; im Unterschied zu <a href="studerR#roy">→Roy</a> war Lenin
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (69, 92, 93) – Foto (74) – wollte seriöses Arbeiten auf
+  dem Kongress (81) – Foto (82, 85, 88, 110) – Thesen zur National- und
+  Kolonialfrage auf dem II. Weltkongress (102) – im Unterschied zu
+  <a href="studerR#roy">→Roy</a> war Lenin
   zur Zusammenarbeit mit radikalen Nationalisten im Kampf gegen den
-  Kolonialismus und Imperialismus bereit; Lenin betraute <a href="studerM#münzenber">→Münzenberg</a> 1921 mit einer Kampagne zur Organisation
-  internationaler Hilfe gegen die Hungersnot an der Wolga.</li>
+  Kolonialismus und Imperialismus bereit (107) –  Lenin betraute <a href="studerM#münzenber">→Münzenberg</a> 1921 mit einer Kampagne zur Organisation
+  internationaler Hilfe gegen die Hungersnot an der Wolga (142).</li>
   <li><a href="https://de.wikipedia.org/wiki/Mar%C3%ADa_Teresa_León_Goyri" target="_blank"><strong>Léon, Maria Teresa</strong></a> (1903–1988) 500<br />
   Spanische Schriftstellerin, Teilnehmerin am »Zweiten Internationale
   Schriftstellerkongresses zur Verteidigung der Kultur«.</li>
@@ -80,20 +83,22 @@
 Deutscher Seemann, in Shanghai als
 <a href="https://de.wikipedia.org/wiki/Otdel_meschdunarodnych_swjasei" target="_blank">OMS</a>-Mitarbeiter aktiv.</li>
   <li><a href="https://de.wikipedia.org/wiki/Paul_Levi" target="_blank"><strong>Levi, Paul</strong></a> (1883–1930)
-  21, 67, 69, 82, 85, 88, 89 <br />
+  21, 67, 69, 82, 85, 88, 89, 152 <br />
   Deutscher Kommunist; wollte das Exekutivkomitee der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (EKKI)
-  nicht wie die Bolschewiki zu einem permanenten Organg machen (21),
-  Mitbegründer der <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Deutschlands" target="_blank">KPD</a>, Teilnehmer am II.
-  Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>.</li>
-  <li><a href="https://de.wikipedia.org/wiki/Max_Levien" target="_blank"><strong>Levien, Max</strong></a>
+  nicht wie die Bolschewiki zu einem permanenten Organg machen (21) –
+  Mitbegründer der <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Deutschlands" target="_blank">KPD</a> – Teilnehmer am II. Weltkongress der
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (67) – Foto (82, 85, 88, 89).</li>
+  <li><span id="levien"></span><a href="https://de.wikipedia.org/wiki/Max_Levien" target="_blank"><strong>Levien, Max</strong></a>
   (1885–1937) 210 <br />
-  Deutsch-russischer Kommunist, lebte in Moskau kurze Zeit mit
-  <a href="studerG#geissler">→Luise Geissler</a> zusammen.</li>
+  Deutsch-russischer Kommunist; ein Führer der
+  <a href="https://de.wikipedia.org/wiki/Münchner_Räterepublik" target="_blank">Münchner
+  Räterepublik</a> der in Moskau kurze Zeit mit <a href="studerG#geissler">→Luise Geissler</a> zusammen lebte (210).</li>
   <li><span id="levine"></span><a href="https://de.wikipedia.org/wiki/Eugen_Leviné" target="_blank"><strong>Leviné, Eugen</strong></a> 
   (1883-1919) 39, 343, 543 <br />
-  Deutscher Kommunist, 1919 als Führer der
+  Deutscher Kommunist; 1919 als Führer der
   <a href="https://de.wikipedia.org/wiki/Münchner_Räterepublik" target="_blank">Münchner Räterepublik</a> zum Tode verurteilt und im Gefängnis
-  erschossen.</li>
+  erschossen (39, 343) – von ihm stammt das Zitat »Wir Kommunisten sind
+  alle Tote auf Urlaub« (543).</li>
   <li><span id="li"></span><a href="https://de.wikipedia.org/wiki/Li_Lisan" target="_blank"><strong>Li Lisan</strong></a> (1899–1967)
   343, 345 <br />
   Chinesischer Kommunist, von der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> im Politbüro der <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Chinas" target="_blank">KPCh</a>
@@ -109,12 +114,15 @@ Deutscher Seemann, in Shanghai als
   <a href="https://de.wikipedia.org/wiki/Die_Gefährten_(Seghers)" target="_blank"><em>Die
   Gefährten</em></a>. 1938 wurde Liao Huanxing in der Sowjetunion zu Lagerhaft
   verurteilt und kam erst 1949 wieder frei.</li>
+  <li><a href="https://fr.wikipedia.org/wiki/Zlata_Lilina" target="_blank"><strong>Lilina, Zina</strong></a> (1882–1929) 
+  79 <br />
+  Russische Kommunistin; Frau von <a href="studerZ#zinovev">→Zinov’ev</a> (79) – Foto (79)</li>
   <li><strong>Ljubarskij, Nikolaj M.</strong> (1887–1938) »Carlo Niccolini« 142 <br />
-  Russischer Kommunist, im Auftrag der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> in Italien aktiv, siehe auch
+  Russischer Kommunist; im Auftrag der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> in Italien aktiv (142), siehe auch
   <a href="http://www.russinitalia.it/dettaglio.php?id=569" target="_blank">Kurzbiographie</a> in <em>Russi in Italia</em>.</li>
   <li><span id="lominadze"></span><a href="https://de.wikipedia.org/wiki/Bessarion_Lominadse" target="_blank"><strong>Lominadze, Vissarion (Besso)</strong></a>	(1897-1934) »Albrecht«, »Werner« 168,
   270, 271, 329, 330, 331, 436, 444 <br />
-  Georgischer Kommunist, Emissär der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> in Deutschland 1925/26;
+  Georgischer Kommunist, Emissär der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> in Deutschland 1925/26 (168) –
   Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927; in China mit 
   <a href="studerN#neumann">→Heinz Neumann</a> Organisator des Aufstands von
   Guangzhou 1927; beging im Dezember 1934 oder Januar 1935 Selbstmord.
@@ -147,14 +155,16 @@ Deutscher Seemann, in Shanghai als
   Basler Regierungsrat.</li>
   <li><a href="https://de.wikipedia.org/wiki/Georg_Lukács" target="_blank"><strong>Lukács, Georg</strong></a>
   (1885–1971), »Blum« 182 <br />
-  Ungarischer Philosoph, als früherer Volkskommissar für
+  Ungarischer Philosoph; als früherer Volkskommissar für
   Unterrichtswesen der
   <a href="https://de.wikipedia.org/wiki/Föderative_Ungarische_Sozialistische_Räterepublik" target="_blank">ungarischen Räterepublik</a> musste Lukács nach Wien ins politische
-  Exil.</li>
+  Exil (182).</li>
   <li><a href="https://de.wikipedia.org/wiki/Anatoli_Wassiljewitsch_Lunatscharski" target="_blank"><strong>Lunačarskij, Anatoli</strong></a> (1875–1933) 145 <br />	
-  Russischer Kommunist dessen Broschüren vom Promachos Verlag in der
-  Schweiz gedruckt wurden.</li>
-  <li><a href="https://de.wikipedia.org/wiki/Rosa_Luxemburg" target="_blank"><strong>Luxemburg, Rosa</strong></a>
+  Russischer Kommunist; dessen Broschüren, wie auch die von <a href="studerL#lenin">→Lenin</a>,
+  <a href="studerT#trotzki">→Trotzki</a> und
+  <a href="studerR#radel">→Radek</a> vom Promachos-Verlag in der
+  Schweiz gedruckt wurden (145).</li>
+  <li><span id="luxemburg"></span><a href="https://de.wikipedia.org/wiki/Rosa_Luxemburg" target="_blank"><strong>Luxemburg, Rosa</strong></a>
   (1871–1919) 19, 148 <br />
   Rosa Luxemburg befürchtete, dass in einer Internationale, in der nur
   die Bolschewiki eine Massenpartei waren, die Organisation von den
