--- a/studer/studerM.html
+++ b/studer/studerM.html
@@ -33,9 +33,9 @@
   <li><span id="machado"></span><a href="https://de.wikipedia.org/wiki/Gerardo_Machado" target="_blank"><strong>Machado, Gerardo</strong></a> (1871–1939) 524, 532 <br />
   Kubanischer Diktator; Auftraggeber der Ermordung von <a href="studerM#mella">→Julio Antonio Mella</a>.</li>
   <li><a href="https://en.wikipedia.org/wiki/William_McLaine" target="_blank"><strong>McLaine, William</strong></a>
-  (1891–1960) 7?, 82 <br />
+  (1891–1960) 82 <br />
   Britischer Marxist und Gewerkschafter, Teilnehmer am II. Weltkongress
-  der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>.</li>
+  der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>, Foto (82).</li>
   <li><a href="https://de.wikipedia.org/wiki/Arthur_MacManus" target="_blank"><strong>MacManus, Arthur</strong></a>
   (1889–1927) 288 <br />
   Schottischer Kommunist und Gewerkschafter, bereitete den »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 mit vor.</li>
@@ -88,9 +88,9 @@
   <a href="studerR#roy">→Roy</a> von Moskau nach Guangzhou.</li>
   <li><a href="https://de.wikipedia.org/wiki/Dmitri_Sacharowitsch_Manuilski" target="_blank"><strong>Manuil‘skij, Dmirtrij</strong></a> (1883–1959), »Marjan« 155, 163, 164, 193,
   348?, 413, 453, 457, 458, 518, 519, 521, 529 <br /> 
-  Ukrainischer Kommunist, <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>-Sekretär, Stalins Vertrauensmann
+  Ukrainischer Kommunist; <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>-Sekretär (155) – Foto (163) - als Komintern-Instrukteur 1927 in Deutschland (163) – Stalins Vertrauensmann
   in der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>; hielt sich unter dem Decknamen »Marjan« als
-  Instrukteur des EKKI bei der <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Deutschlands" target="_blank">KPD</a> auf; rügte <a href="studerH#humbert">→Humbert-Droz</a> 1929 auf dem EKKI-Plenum; in der m4komintern auch
+  Instrukteur des EKKI bei der <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Deutschlands" target="_blank">KPD</a> auf; rügte <a href="studerH#humbert">→Humbert-Droz</a> 1929 auf dem EKKI-Plenum (193) – in der Komintern auch
   zuständig für Spanien.</li>
   <li><span id="mao"></span><a href="https://de.wikipedia.org/wiki/Mao_Zedong" target="_blank"><strong>Mao Zedong</strong></a>
 (1893–1976) 279, 322, 332, 336, 346, 383, 551 <br />
@@ -147,7 +147,7 @@ in Zentral- und Südchina aufbaute.</li>
   <a href="https://hls-dhs-dss.ch/de/articles/023027/2008-08-27/" target="_blank">Kurzbiographie</a> in <em>Historisches Lexikon der Schweiz</em>.</li>
   <li><a href="https://de.wikipedia.org/wiki/Claude_McKay" target="_blank"><strong>McKay, Claude</strong></a>
   (1889–1948) 102 <br />
-  Jamaikanischer Schriftsteller; Redner beim 4. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> 1922.</li>
+  Jamaikanischer Schriftsteller; Redner beim 4. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> 1922 (102).</li>
   <li><strong>Meins, Hans</strong> (1900–?), »Jan Jansen«, »Georg Jacobsen« 414 <br />
   Deutscher Kommunist, Initiator des <em>Instituts zum Studium des Faschismus (INFA)</em>.</li>
   <li><a href="https://de.wikipedia.org/wiki/Wsewolod_Emiljewitsch_Meyerhold" target="_blank"><strong>Meierchol’d, Vsevolod</strong></a> (Meyerhold) (1874–1940) 261 <br />
@@ -155,12 +155,12 @@ in Zentral- und Südchina aufbaute.</li>
   die imperialistische Poilit der USA und Großbritanniens gegenüber
   China anklagte.</li>
   <li><span id="mella"></span><a href="https://de.wikipedia.org/wiki/Julio_Antonio_Mella" target="_blank"><strong>Mella, Julio Antonio</strong></a> (geb. Nicanor McParland) (1903–1929) 266, 524, 532 <br />
-  Kubanischer Kommunist; Delegierter beimn »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927; Gefährte von
-  <a href="studerM#modotti">→Tina Modotti</a>, von Agenten m4slink(M, machado,
-  Machado)s 1929 im mexikanischen Exil erschossen.</li>
+  Kubanischer Kommunist; Delegierter beim »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927; Gefährte von
+  <a href="studerM#modotti">→Tina Modotti</a>, von Agenten 
+  <a href="studerM#machado">→Machado</a>s 1929 im mexikanischen Exil erschossen.</li>
   <li><span id="meyer"></span><a href="https://de.wikipedia.org/wiki/Ernst_Meyer_(Politiker)" target="_blank"><strong>Meyer, Ernst</strong></a> (1887–1930) 39, 68, 343 <br />
   Deutscher Kommunist; verheiratet mit <a href="studerM#meyer-levine">→Rosa
-  Meyer-Leviné</a>, Teilnehmer am II. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>, in der
+  Meyer-Leviné</a> (39) –  Teilnehmer am II. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (68) – in der
   <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Deutschlands" target="_blank">KPD</a> Vertreter der sogenannten
   »<a href="https://de.wikipedia.org/wiki/Versöhnler" target="_blank">Versöhnler</a>«.</li>
   <li><a href="https://de.wikipedia.org/wiki/Hannes_Meyer" target="_blank"><strong>Meyer, Hannes</strong></a>
@@ -169,14 +169,14 @@ in Zentral- und Südchina aufbaute.</li>
   <a href="https://de.wikipedia.org/wiki/Marxistische_Arbeiterschule" target="_blank">Marxistischen Arbeiterschule (MASCH)</a>; in Mexiko am Abend ihres
   Todes mit <a href="studerM#modotti">→Tina Modotti</a> zusammen.</li>
   <li><span id="meyer-levine"></span><a href="https://de.wikipedia.org/wiki/Rosa_Meyer-Leviné" target="_blank"><strong>Meyer–Leviné, Rosa</strong></a> (geb. Broido) (1890–1979) 38, 343, 380, 389, 390 <br />
-  Deutsche Kommunistin, Witwe der russischen Revolutionärs und führenden
+  Deutsche Kommunistin; Witwe der russischen Revolutionärs und führenden
   Mitglieds der
-  <a href="https://de.wikipedia.org/wiki/Münchner_Räterepublik" target="_blank">Münchner Räterepublik</a> <a href="studerL#levine">→Eugen Leviné</a>, nach dem
+  <a href="https://de.wikipedia.org/wiki/Münchner_Räterepublik" target="_blank">Münchner Räterepublik</a> <a href="studerL#levine">→Eugen Leviné</a> (38) –  nach dem
   Tod ihres zweiten Ehemanns <a href="studerM#meyer">→Ernst Meyer</a> in Moskau,
   nach 1933 im Exil in London.</li>
   <li><strong>Michel’son-Manujilov, Solomon</strong> (1882–?), »Max«, »Onkel Max», »Max Ziese« 153 <br />
   Russsicher Kommunist; 1929 bis 1932 Leiter der Berliner
-  <a href="https://de.wikipedia.org/wiki/Otdel_meschdunarodnych_swjasei" target="_blank">OMS</a>-Stelle.</li>
+  <a href="https://de.wikipedia.org/wiki/Otdel_meschdunarodnych_swjasei" target="_blank">OMS</a>-Stelle (153).</li>
   <li><strong>Mickiewicz, Olga</strong> (1889–1943) 341 <br />
   Litauische (oder polnische?) Gewerkschafterin, als Vertreterin der
   <a href="https://de.wikipedia.org/wiki/Rote_Gewerkschafts-Internationale" target="_blank">Profintern</a> 1928 in Shanghai.</li>
@@ -188,12 +188,13 @@ in Zentral- und Südchina aufbaute.</li>
   die Polizei zurückberufen nach Moskau, Rektor der
   <a href="https://de.wikipedia.org/wiki/Sun-Yat-sen-Universität_(Moskau)" target="_blank">Sun-Yat-sen-Universität</a> in Moskau.</li>
   <li><strong>Minev, Stojan</strong> (1889–1959), »Vanini«, »Lorenzo«, »Stepanov«,
-  »Moreno« 67, 168, 457, 511, 515, 516, 520, 521, 539, 540 <br />
+  »Moreno« 67, 165, 168, 457, 511, 515, 516, 520, 521, 539, 540 <br />
   Bulgarischer Kommunist; studierte Medizin in Genf, stieß zur
   <a href="https://de.wikipedia.org/wiki/Zimmerwalder_Konferenz#Zimmerwalder_Linke" target="_blank">Zimmerwalder Linke</a>
   zwischen 1927 und 1929 persönlicher Sekretär von Stalin, verschiedene
-  Funktionen in der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>; 1921 bis 1926 Komintern-Berater in
-  Deutschland und Frankreich unter verschiedenen Decknamen; im Auftrag
+  Funktionen in der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>, Teilnehmer am II. Weltkongress (67) –
+  1921 bis 1926 Komintern-Berater in
+  Deutschland und Frankreich unter verschiedenen Decknamen (168) – im Auftrag
   der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> in Spanien, dort beteiligt an der Repression der
   <a href="https://de.wikipedia.org/wiki/Partido_Obrero_de_Unificación_Marxista" target="_blank">POUM</a>; gemeinsam mit <a href="studerT#togliatti">→Togliatti</a> verantwortlich
   für die Absetzung <a href="studerC#codovilla">→Codovilla</a>s als Beauftragter
@@ -217,10 +218,11 @@ in Zentral- und Südchina aufbaute.</li>
   <li><span id="modotti"></span><a href="https://de.wikipedia.org/wiki/Tina_Modotti" target="_blank"><strong><em>Modotti, Tina</em></strong></a>
   (1896–1942) »Kostarikas«, »Julio Anronio«, »Maria Cortes«, »Magda Toledo«, 
   »Carmen Ruiz Sanchez«, »Renée«, »Maria Pidal«, »Maria«, »Vera Martini«
-  30, 106?, 221, 266, 276, 283, 407, 437, 441, 488–494, 498–500, 513,
+  30, 174, 221, 266, 276, 283, 407, 437, 441, 488–494, 498–500, 513,
   514, 523–525, 530, 532–534, 536, 553 <br />
   Italienische Kommunistin; Gefährtin von <a href="studerV#vidali">→Vittorio
-  Vidali</a>, veröffentlichte ihre Fotografien in der
+  Vidali</a> (30) – 1933 und 1936 in geheimer Mission in Europa unterwegs
+  (174) – veröffentlichte ihre Fotografien in der
   <a href="https://de.wikipedia.org/wiki/Arbeiter-Illustrierte-Zeitung" target="_blank"><em>AIZ</em></a>, schrieb für die
   <a href="https://de.wikipedia.org/wiki/Internationale_Rote_Hilfe" target="_blank">Internationale Rote Hilfe</a> einen programmatischen Artikel »<em>Photos
   als Waffe der RH-Agitation</em>«, liiert mit <a href="studerM#mella">→Julio
@@ -247,13 +249,13 @@ in Zentral- und Südchina aufbaute.</li>
   im Exil in Moskau.</li>
   <li><a href="https://de.wikipedia.org/wiki/Carl_Vital_Moor" target="_blank"><strong>Moor, Carl Vital</strong></a>
   (1852–1932) 146 <br />
-  Schweizer Journalist; »etwas undurchsichtiger Financier der Bolschewiki«.</li>
+  Schweizer Journalist; »etwas undurchsichtiger Financier der Bolschewiki« (146).</li>
   <li><span id="moser"></span><a href="https://de.wikipedia.org/wiki/Mentona_Moser" target="_blank"><strong>Moser, Mentona</strong></a>	
   (1874–1971) 198, 199, 232, 233, 390, 419, 493, 551 <br />
-  Schweizer Kommunistin; genannt »Die rote Millionärin»,  1929 bis 1933
+  Schweizer Kommunistin; genannt »Die rote Millionärin», Foto (199) –  1929 bis 1933
   im illegalen Apparat der
   <a href="https://de.wikipedia.org/wiki/Rote_Hilfe_Deutschlands" target="_blank">Roten
-  Hilfe</a> tätig, später wurde ihr Vermögen in Deutschland konfisziert,
+  Hilfe</a> tätig (198) – später wurde ihr Vermögen in Deutschland konfisziert,
   1935 in Paris für die
   <a href="https://de.wikipedia.org/wiki/Internationale_Rote_Hilfe" target="_blank">Intenrationale Rote Hilfe</a> aktiv, musste wieder in die Schhweiz, wo
   sie mittellos lebte bis sie auf Einladung von <a href="studerPQ#pieck">→Wilhelm Pieck</a> in die DDR übersiedelte.</li>
@@ -264,23 +266,29 @@ in Zentral- und Südchina aufbaute.</li>
   <li><a href="https://de.wikipedia.org/wiki/Erich_Mühsam" target="_blank"><strong>Mühsam, Erich</strong></a>
   (1878–1934) 58 <br />
   Deutscher Anarchist; Gründer der
-  <a href="https://de.wikipedia.org/wiki/Hilde_Kramer-Fitzgerald#Vereinigung_revolutionärer_Internationalisten_Bayerns" target="_blank">Vereinigung Revolutionärer Internationalisten Bayerns</a>.</li>
-  <li><a href="https://en.wikipedia.org/wiki/Abani_Mukherji" target="_blank"><strong>Mukherji, Abani</strong></a>
-  (1891–1937) 66, 79, 117, 118, 206, 543 <br />
+  <a href="https://de.wikipedia.org/wiki/Hilde_Kramer-Fitzgerald#Vereinigung_revolutionärer_Internationalisten_Bayerns" target="_blank">Vereinigung Revolutionärer Internationalisten Bayerns</a> (58).</li>
+  <li><span id="mukherji"></span><a href="https://en.wikipedia.org/wiki/Abani_Mukherji" target="_blank"><strong>Mukherji, Abani</strong></a>
+  (1891–1937) 66, 79, 117, 118, 120, 206, 543 <br />
   Indischer Kommunist; verfasste mit <a href="studerR#roy">→Roy</a> ein <em>Indisches
-  kommunistisches Manifest</em>, Teilnehmer des II. Weltkongresses der
-  <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>, Gründungsmitglied der Kommunistischen Partei Indiens 1920
-  in Taschkent, beschuldigte später seinen früheren Freund Roy, ein
-  Spitzel zu sein; Mukherji wurde 1937 in Moskau verhaftet und
-  erschossen.</li>
+  kommunistisches Manifest</em> (66) –  Teilnehmer des II. Weltkongresses der
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>, Foto (79) – Gründungsmitglied der Kommunistischen Partei Indiens 1920
+  in Taschkent (117f) –
+  Delegierter beim <a href="https://de.wikipedia.org/wiki/Kongress_der_kommunistischen_und_revolutionären_Organisationen_des_Fernen_Ostens" target="_blank">Kongress der Erwerbstätigen des Fernen Ostens</a> (120) – 
+  beschuldigte später seinen früheren Freund Roy, ein
+  Spitzel zu sein (206) –  Mukherji wurde 1937 in Moskau verhaftet und
+  erschossen (543).</li>
   <li><span id="münzenberg"></span><a href="https://de.wikipedia.org/wiki/Willi_Münzenberg" target="_blank"><strong><em>Münzenberg, Willi</em></strong></a> (1889–1940) 29, 30, 59, 60, 64,
   67, 68, 70-72, 75-79, 96, 139, 142, 152, 157, 158, 168, 180, 186, 200,
   212-216, 220-231, 233, 239, 254-256, 259-268, 270-272, 274-276, 278,
   280-290, 292-297, 361, 366-368, 371, 375, 390-403, 405, 416, 418, 419,
   427, 438, 452-454, 466, 467, 471, 472, 478, 495, 523, 527, 530, 531,
   534, 539, 549, 552 <br /> 
-  Teilnehmer am II. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>, „Kulturunternehmer“ im
-  Auftrag der Komintern, Gründer der <a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus" target="_blank">Liga gegen Imperialismus und für nationale Unabhängigkeit</a>,
+  Deutscher Kommunist; „Kulturunternehmer“ der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (29) –
+  als Vorsitzender der
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Jugendinternationale" target="_blank">Kommunistischen Jugeninternationale</a> Teilnehmer am II. Weltkongress
+  der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (60f, 96) – Kritiker der Vertreter des rechten Flügels der
+  <a href="https://de.wikipedia.org/wiki/Unabhängige_Sozialdemokratische_Partei_Deutschlands" target="_blank">USPD</a> am II. Weltkongress (70, 72, 75, 76) – Foto (71, 79) –
+  Gründer der <a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus" target="_blank">Liga gegen Imperialismus und für nationale Unabhängigkeit</a>,
   organisierte den »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927,
   Flucht vor dem
   Nationalsozialismus nach Paris, dort insbesondere Verleger des
@@ -294,7 +302,7 @@ in Zentral- und Südchina aufbaute.</li>
   <li><a href="https://de.wikipedia.org/wiki/J._T._Murphy" target="_blank"><strong>Murphy, John Thomas</strong></a>
   (1888–1965) 68, 82, 95, 303 <br />
   Britischer Gewerkschafter; Teilnehmer am II. Weltkongress der
-  <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>, zuvor hatte er an der Internationalen Konferenz
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (68, 95) – Foto (82) – zuvor hatte er an der Internationalen Konferenz
   revolutionärer Parteien und Organisationen Westeuropas in Amsterdam
   teilgenommen.</li>
   <li><a href="https://de.wikipedia.org/wiki/Jean-Marie_Musy" target="_blank"><strong>Musy, Jean-Marie</strong></a>
