--- a/studer/studerN.html
+++ b/studer/studerN.html
@@ -31,10 +31,9 @@
 
 <ul>
   <li><strong>Narbutabekov, Taspolad</strong> (?–1938) 121 <br />
-  Redner aus Zentralasien auf dem
-  <a href="https://de.wikipedia.org/wiki/Kongress_der_Völker_des_Ostens" target="_blank">Kongress der Völker des Ostens</a> 1920 in Baku, in der er das Vorgehen
-  der Bolschewiki gegen die lokale Bevölkerung als »kolonial«
-  charakterisierte.</li>
+  Linker Nationalist aus Turkestan; Redner aus Zentralasien auf dem <a href="https://de.wikipedia.org/wiki/Kongress_der_Völker_des_Ostens" target="_blank">Kongress der Völker des Ostens</a> 1920 in Baku,
+  auf dem er das Vorgehen der Bolschewiki gegen die lokale Bevölkerung als »kolonial«
+  charakterisierte (121).</li>
   <li><strong>Nasanov, M. N.</strong> (1902-?), »Charly« 307 <br />
   Vertreter der
   <a href="https://de.wikipedia.org/wiki/Kommunistische_Jugendinternationale" target="_blank">Kommunistischen Jugendinternationale</a>, kritisierte die Politik des
@@ -55,8 +54,11 @@
   <li><span id="neumann"></span><a href="https://de.wikipedia.org/wiki/Heinz_Neumann_(Politiker)" target="_blank"><strong><em>Neumann, Heinz</em></strong></a> (1902–1937) »Moritz«, »Karl Bieler«, »Octavio« 30, 167, 189-191, 
   194-196, 214, 217, 323, 329-331, 364, 392, 418, 425-427, 432-440, 442-445, 447-451, 
   453, 528, 535, 541, 543, 549 <br />
-  Vertrauter Stalins, für die Komintern in China, Chefredakteur der
-  Roten Fahne, emigirierte 1933 zusammen mit <a href="studerB#buber-neumann">→Margarete Buber-Neumann</a> in die Sowjetunion,
+  Deutscher Kommunist; Partner von <a href="studerB#buber-neumann">→Margarete
+  Buber-Neumann</a> (189) – Foto (194) –
+  Vertrauter Stalins (195, 196) – aber 1931/32 in Opposition zu Stalins
+  Deutschland-Poilitik (195) –  1928–1932 Chefredakteur der Roten Fahne (196) - für die Komintern in China,
+  emigirierte 1933 zusammen mit <a href="studerB#buber-neumann">→Margarete Buber-Neumann</a> in die Sowjetunion,
   entwickelte Differenzen zu Stalin wegen der Politik der
   <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> gegen den Nationalsozialismus, für die Komintern in Spanien,
   von dort abkommandiert lebte er illegal in der Schweiz, aus der er
@@ -69,7 +71,7 @@
   aufbereitete, 1930 von den britischen Behörden in Hongkong verhaftet.</li>
   <li><a href="https://de.wikipedia.org/wiki/Boris_Iwanowitsch_Nikolajewski" target="_blank"><strong>Nicolaevsky, Boris</strong></a> (1887–1966) 138 <br />
   Führender Menschewik; <a href="studerR#reich">→Reich</a> erzählte Nicolaevsky
-  1935 in Prag über seine Tätigkeit für die <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> in Berlin.</li>
+  1935 in Prag über seine Tätigkeit für die <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> in Berlin (138).</li>
   <li><span id="nin"></span><a href="https://de.wikipedia.org/wiki/Andreu_Nin" target="_blank"><strong>Nin, Andreu</strong></a>
   (1892–1037) 502, 503, 524 <br />
   Spanischer Kommunist, führendes Mitglied der
