--- a/studer/studerO.html
+++ b/studer/studerO.html
@@ -32,9 +32,12 @@
 <ul>
   <li><span id="oesterreich"></span><a href="https://de.wikipedia.org/wiki/Ruth_Oesterreich" target="_blank"><strong>Oesterreich, Ruth</strong></a> (1894–1943) »Ruth Gebhardt« 147, 150, 151,
   157–159, 211, 391, 533, 548 <br />
-  Sekretärin des Westeuropäischen Sekretariats der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>; zusammen
-  mit <a href="studerK#kramer">→Hilde Kramer</a> und m4slink(<code class="language-plaintext highlighter-rouge">G', </code>geisenberg’,
-  Cilly Geisenberg) 1929 aus der <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Deutschlands" target="_blank">KPD</a> ausgeschlossen; emigrierte 1933
+  Deutsche Kommunistin; Sekretärin des Westeuropäischen Sekretariats der
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (147, 150) – Foto (151) –  zusammen
+  mit <a href="studerK#kramer">→Hilde Kramer</a> und 
+  <a href="studerG#geisenberg">→Cilly Geisenberg</a> 1929 aus der 
+  <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Deutschlands" target="_blank">KPD</a>
+  ausgeschlossen (158f) – emigrierte 1933
   nach Prag; 1943 von den Nazis hingerichtet.</li>
   <li><a href="https://de.wikipedia.org/wiki/Rudolf_Olden" target="_blank"><strong>Olden, Rudolf</strong></a>
   (1885–1940) 392 <br />
@@ -46,8 +49,7 @@
   Schweizer Verleger; sollte den Vertrieb des
   <a href="https://de.wikipedia.org/wiki/Braunbuch#Braunbuch_1933" target="_blank"><em>Braunbuchs über Reichstagsbrand und Hitlerterror</em></a> übernehmen.</li>
   <li><a href="https://de.wikipedia.org/wiki/Grigori_Konstantinowitsch_Ordschonikidse" target="_blank"><strong>Ordžonikidze, Grigorij</strong></a> (1888–1937) 110 <br />
-  Georgischer Kommunist; Leiter des Organisationsbüros des
-  <a href="https://de.wikipedia.org/wiki/Kongress_der_Völker_des_Ostens" target="_blank"><em>Kongresses der Völker des Ostens</em></a> 1920 in Baku.</li>
+  Georgischer Kommunist; Leiter des Organisationsbüros des <a href="https://de.wikipedia.org/wiki/Kongress_der_Völker_des_Ostens" target="_blank">Kongresses der Völker des Ostens</a> 1920 in Baku (110).</li>
   <li><span id="orlov"></span><a href="https://de.wikipedia.org/wiki/Alexander_Michailowitsch_Orlow" target="_blank"><strong>Orlov, Alexandr</strong></a> (geb. Lejba Fel’dbin) (ab1920 Lev Nikol’skij) 503, 510, 525 <br />
   Mitarbeiter des NKVD, in Spanien mit dem Auftrag die Volksfront von
   Trotzkisten und anderen Oppositionellen zu säubern, verantwortlich für
