--- a/studer/studerPQ.html
+++ b/studer/studerPQ.html
@@ -36,29 +36,31 @@
   <a href="https://de.wikipedia.org/wiki/Communist_Party_USA" target="_blank">KP der
   USA</a> beim 6. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>.</li>
   <li><strong>Pak, Dinshun</strong> (1898–1938) 82 <br />
-  Koreanischer Kommunist; Teilnehmer am II. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>.</li>
+  Koreanischer Kommunist; Teilnehmer am II. Weltkongress der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>, Foto (82).</li>
   <li><strong>Parlow-Hutchinson, Maud</strong> (Ethel) (1880–?) 186, 423, 429, 430 <br />
-  Britin mit deutscher Staatsangehörigkeit, tätig als Übersetzerin bei
-  <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a>, ab Spätsommer 1933 im Exil in der Schweiz, 1934 in Zürich
-  verhaftet.</li>
+  Britin mit deutscher Staatsangehörigkeit; tätig als Übersetzerin bei
+  <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> (186) – ab Spätsommer 1933 im Exil in der Schweiz (423) –  1934 in Zürich
+  verhaftet (429f).</li>
   <li><span id="pascha"></span><a href="https://de.wikipedia.org/wiki/Enver_Pascha" target="_blank"><strong>Pascha, Enver</strong></a>
   (1881–1922) 111, 132 <br />
-  Führender Jungtürke; wurde zum
-  <a href="https://de.wikipedia.org/wiki/Kongress_der_Völker_des_Ostens" target="_blank">Kongress der Völker des Ostens</a> 1920 in Baku eingeladen, ein
-  Auftritt beim Kongress jedoch wurde ihm untersagt, die europäischen
-  Parteien kritisierten seine Anwesenheit, war er doch der »Schlächter
-  der Armenier«.</li>
+  Führender Jungtürke; wurde zum <a href="https://de.wikipedia.org/wiki/Kongress_der_Völker_des_Ostens" target="_blank">Kongress der Völker des Ostens</a> 1920 in Baku eingeladen, ein Auftritt beim
+  Kongress jedoch wurde ihm untersagt (111) – die europäischen Parteien
+  kritisierten seine Anwesenheit, war er doch der »Schlächter der
+  Armenier« (132).</li>
+  <li><strong>Pavlovič, Michail N.</strong> (1871–1927) 124, 125<br />
+  Russischer Orientalist; Mitorganisator des <a href="https://de.wikipedia.org/wiki/Kongress_der_Völker_des_Ostens" target="_blank">Kongresses der Völker des Ostens</a> 1920 in Baku (125) – Foto (124).</li>
   <li><a href="https://de.wikipedia.org/wiki/Ana_Pauker" target="_blank"><strong>Pauker, Ana</strong></a>
   (1893–1960) 173 <br />
   Rumänische Kommunistin; zwischen 1930 und 1923 für die <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> in
-  Paris tätig.</li>
+  Paris tätig (173).</li>
   <li><span id="petrovskij"></span><a href="https://en.wikipedia.org/wiki/David_Petrovsky" target="_blank"><strong>Petrovskij, David</strong></a> (1886–1937) »David Lipetz«, »David Goldfarb«,
   »A.J. Bennett«, »Isolde« 281, 288, 290	<br />
   Petrovskij arbeitete für die <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>, Organisator
   beim »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 an Stelle von 
   <a href="studerR#roy">→Roy</a>.</li>
   <li><strong>Pesch, Fritz</strong> 425 <br />
-  Schweizer linker Sozialdemokrat, der die Kinder von <a href="studerK#komjati">→Irén</a> und m4slink(K, komjata, `Aladár Konját’) bei sich
+  Schweizer linker Sozialdemokrat, der die Kinder von <a href="studerK#komjati">→Irén</a> und 
+  <a href="studerK#komjata">→Aladár Konját</a> bei sich
   aufnahm, da sich die Konjáts vor der Schweizer Polizei verstecken
   mussten.</li>
   <li><strong>Peskine, Boris</strong> (1911–1991) 465 <br />
@@ -67,8 +69,8 @@
   Teurel</a> nach dem Roman <em>L’Espoir</em> von <a href="studerM#malraux">→André
   Malraux</a>.</li>
   <li><strong>Petit, Robert</strong> ( 1893–1951), »Bob« 181, 422 <br />
-  Französisches Redaktionsmitglied der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> und der <em>La
-  Correspondance Internationale</em> in Paris, siehe auch
+  Französischer Kommunist;  Redaktionsmitglied der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> (181) – und der <em>La
+  Correspondance Internationale</em> in Paris (422), siehe auch
   <a href="https://maitron.fr/spip.php?article75931" target="_blank">Kurzbiographie</a> in: <em>Le Maitron, Dictionnaire biographique mouvement ouvrier, mouvement social</em>.</li>
   <li><a href="https://en.wikipedia.org/wiki/David_Petrie" target="_blank"><strong>Petrie, Sir David</strong></a>
   (1879–1961) 251 <br />
@@ -83,15 +85,15 @@
   Britischer Doppelagent; 1933 dem <em>Weltkomitee für die Opfer des
   deutschen Faschismus</em> von <a href="studerM#münzenberg">→Münzenberg</a>
   beigetreten, schrieb für die <em>Times</em> aus Spanien während des
-  <a href="https://de.wikipedia.org/wiki/Spanischer_Bürgerkrieg" target="_blank">Spanischen Bürgerkeigs</a>.</li>
-  <li><strong>Phillips, Charles Francis</strong> (später Charles Shipman) (1895–1989),
+  <a href="https://de.wikipedia.org/wiki/Spanischer_Bürgerkrieg" target="_blank">Spanischen Bürgerkriegs</a>.</li>
+  <li><span id="phillips"></span><strong>Phillips, Charles Francis</strong> (später Charles Shipman) (1895–1989),
   »Ramírez«, »Jesús«, »Frank Seaman«, »Jesús Ramírez«, »Rosovsky«,
   »Manuel Díaz de la Peña«, »José Rocha«, »Manuel Gómez« 60, 63, 64, 65,
   78, 93, 266, 270–272, 303, 459 <br />
   Amerikanischer Kommunist; »Schwarzes Schaf einer wohlhabenden New
-  Yorker Familie, Mitgründer der
-  <a href="https://de.wikipedia.org/wiki/Partido_Comunista_Mexicano" target="_blank">Kommunistischen Partei Mexikos</a>, Teilnehmer des II. Weltkongresses
-  der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>, Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927, Autor des Buchs
+  Yorker Familie (60) –  Mitgründer der
+  <a href="https://de.wikipedia.org/wiki/Partido_Comunista_Mexicano" target="_blank">Kommunistischen Partei Mexikos</a> (64) –  Teilnehmer des II. Weltkongresses
+  der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (63, 78, 93) –  Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927, Autor des Buchs
   <a href="https://autonomedia.org/product/it-had-to-be-revolution/" target="_blank"><em>It Had to be Revolution: Memoirs of an American Radical</em></a>, London
   1993.</li>
   <li><span id="pieck"></span><a href="https://de.wikipedia.org/wiki/Wilhelm_Pieck" target="_blank"><strong>Pieck,
@@ -105,16 +107,16 @@
   <a href="https://de.wikipedia.org/wiki/Hotel_Lux" target="_blank">Hotel Lux</a> entzog.</li>
   <li><a href="https://de.wikipedia.org/wiki/Annie_Reich" target="_blank"><strong>Pink, Annie</strong></a> 
   (1902–1971) 548 <br />
-  Österreichisch-amerikanische Psychoanalytikerin, verheiratet mit
-  <a href="studerR#reichw">→Wilhelm Reich</a>, emigirierte mit m4slink(R, reich,
-  Jakov Reich) in die USA .</li>
+  Österreichisch-amerikanische Psychoanalytikerin; verheiratet mit
+  <a href="studerR#reichw">→Wilhelm Reich</a>, emigirierte mit 
+  <a href="studerR#reich">→Jakov Reich</a> in die USA (548).</li>
   <li><a href="https://de.wikipedia.org/wiki/Theo_Pinkus" target="_blank"><strong>Pinkus, Theo</strong></a>
   (1909–1991) 200, 219, 423, 427 <br />
   Schweizer Verleger; arbeitete für die
-  <a href="https://de.wikipedia.org/wiki/Arbeiter-Illustrierte-Zeitung" target="_blank"><em>AIZ</em></a> und für die deutsche Ausgabe <em>Rundschau über Politik,
-  Wirtschaft und Arbeiterbewegung</em> der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a>, Freund von
-  <a href="studerN#neumann">→Heinz Neumann</a> und m4slink(B, buber-neumann, `Margarete
-  Buber-Neumann’).</li>
+  <a href="https://de.wikipedia.org/wiki/Arbeiter-Illustrierte-Zeitung" target="_blank"><em>AIZ</em></a> (200) –  und für die deutsche Ausgabe <em>Rundschau über Politik,
+  Wirtschaft und Arbeiterbewegung</em> der <a href="https://de.wikipedia.org/wiki/Inprekorr" target="_blank">Inprekorr</a> (423) –  Freund von
+  <a href="studerN#neumann">→Heinz Neumann</a> und 
+  <a href="studerB#buber-neumann">→Margarete Buber-Neumann</a> (427).</li>
   <li><strong>Piotrkowski, Karola</strong> <a href="studerB#blochk">→Bloch, Karola</a></li>
   <li><a href="https://de.wikipedia.org/wiki/Erwin_Piscator" target="_blank"><strong>Piscator, Erwin</strong></a>
   (1893–1966) 234, 403 <br />
@@ -128,9 +130,9 @@
   <li><a href="https://de.wikipedia.org/wiki/Ossip_Aronowitsch_Pjatnizki" target="_blank"><strong>Pjatnickij, Osip</strong></a> (1882–1938) 22, 153, 156, 165, 177, 226, 359, 407,
   415, 531, 537?, 543 <br />	
   Russischer Kommunist; 1921 als Vertreter der Bolschewiki den
-  Sekretären des EKKI zugeordnet (22),  Finanzchef der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>,
+  Sekretären des EKKI zugeordnet (22) –  Finanzchef der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>,
   als solcher beschuldigte er <a href="studerR#reich">→Jakov Reich</a> der
-  Unterschlagung, Pjatnickij wurde nach einem Prozess 1938 hingerichtet.</li>
+  Unterschlagung (156) – Pjatnickij wurde nach einem Prozess 1938 hingerichtet.</li>
   <li><a href="https://de.wikipedia.org/wiki/Fritz_Platten" target="_blank"><strong>Platten, Fritz</strong></a>
   (1883–1942) 210, 366 <br />
   Schweizer Kommunist; hat die Identität »Paul und Gertrud Rüegg« für
@@ -142,17 +144,16 @@
   Aufstand 1927 im chinesischen Guangzhou, den <a href="studerN#neumann">→Neumann</a> und m4slink(L, lominadze, Lominadze) organisierten.</li>
   <li><a href="https://de.wikipedia.org/wiki/Blagoi_Popow" target="_blank"><strong>Popov, Blagoi</strong></a>
   (1902–1968) 171 <br />
-  Bulgarischer Kommunist; mit 
-  <a href="studerD#dimitrov">→Dimitrov</a> im
-  Reichstagsbrandprozess angeklagt.</li>
+  Bulgarischer Kommunist; mit <a href="studerD#dimitrov">→Dimitrov</a> im
+  Reichstagsbrandprozess angeklagt (171).</li>
   <li><strong>Poretzky, Elisabeth</strong> 361 <br />
   Frau von <a href="studerP#poretsky">→Nathan Poretsky</a>.</li>
   <li><a href="https://de.wikipedia.org/wiki/Ignaz_Reiss" target="_blank"><strong>Poretsky, Nathan</strong></a>
-  (1899–1937), »Ignaz Reiss« 361, 534 abr/&gt;
-  Führender Mitarbeiter des sowjtischen Militärgeheimdiensts GRU; vom
+  (1899–1937), »Ignaz Reiss« 361, 534 <br />
+  Führender Mitarbeiter des sowjetischen Militärgeheimdiensts GRU; vom
   NKVD 1937 in der Schweiz ermordet.</li>
   <li><span id="prestes"></span><a href="https://de.wikipedia.org/wiki/Lu%C3%ADs_Carlos_Prestes" target="_blank"><strong>Prestes, Luís Carlos</strong></a> (1898–1990), 173, 174 <br />
-  Brasilianischer Kommunist, Mann von <a href="studerB#benario">→Olga Benario</a>.</li>
+  Brasilianischer Kommunist; Mann von <a href="studerB#benario">→Olga Benario</a> (173f).</li>
   <li><a href="https://de.wikipedia.org/wiki/Rayna_Prohme" target="_blank"><strong>Prohme, Rayna</strong></a>	
   (1894–1927) 309, 311, 313 <br />
   Amerikanische Journalistin; gab mit ihrem Mann die <em>Peking People’s
@@ -178,8 +179,7 @@
   Chinesischer Kommunist;</li>
   <li><a href="https://en.wikipedia.org/wiki/Tom_Quelch" target="_blank"><strong>Quelch, Tom</strong></a> (1886–1954)
   111, 112 <br />
-  Britischer Kommunist; Teilnehmer am
-  <a href="https://de.wikipedia.org/wiki/Kongress_der_Völker_des_Ostens" target="_blank">Kongress der Völker des Ostens</a> 1920 in Baku.</li>
+  Britischer Kommunist; Teilnehmer am <a href="https://de.wikipedia.org/wiki/Kongress_der_Völker_des_Ostens" target="_blank">Kongress der Völker des Ostens</a> 1920 in Baku (111) – Foto (112).</li>
 </ul>
 
 <!-- previous and next page -->
