--- a/studer/studerT.html
+++ b/studer/studerT.html
@@ -65,9 +65,10 @@
   siehe auch <a href="https://maitron.fr/spip.php?article120761" target="_blank">Kurzbiographie</a> in: <em>Le Maitron, Dictionnaire biographique mouvement ouvrier, mouvement social</em>.</li>
   <li><a href="https://de.wikipedia.org/wiki/August_Thalheimer" target="_blank"><strong>Thalheimer, August</strong></a> (1884–1948) 152, 166, 195 <br />
   Deutscher Kommunist; gehörte Anfang der 1920er Jahre zum Kreis um
-  <a href="studerR#reich">→Jakov Reich</a> (152) – förderte m4slink(N, neumann,
-  Heinz Neumann) (195) – <a href="studerD#dimitrov">→Dimitrov</a> betrieb 1928
-  den Ausschluss von Thalheimer aus der <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Deutschlands" target="_blank">KPD</a> (166).</li>
+  <a href="studerR#reich">→Jakov Reich</a> (152) – förderte 
+  <a href="studerN#neumann">→Heinz Neumann</a> (195) – 
+  <a href="studerD#dimitrov">→Dimitrov</a> betrieb 1928 den Ausschluss von
+  Thalheimer aus der <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Deutschlands" target="_blank">KPD</a> (166).</li>
   <li><span id="thalmannp"></span><a href="https://de.wikipedia.org/wiki/Paul_Thalmann" target="_blank"><strong>Thalmann, Paul</strong></a> (1901–1980), »Franz Heller« 276, 468, 469, 510, 511 <br />
   Schweizer Kommunist, später Anarchist; Mitglied der Schweizer
   Sozialistischen Jugendorganisation (276) – 1929 nach seinem Studium an
@@ -84,7 +85,7 @@
   <li><span id="thälmann"></span><a href="https://de.wikipedia.org/wiki/Ernst_Thälmann" target="_blank"><strong>Thälmann, Ernst</strong></a> (1886–1944) 167, 176, 194, 196, 225, 226, 331, 389,
   402, 414, 433, 444, 445, 489, 538, 552 <br />
   Deutscher Kommunist; Mitglied der Parteiführung der <a href="https://de.wikipedia.org/wiki/Kommunistische_Partei_Deutschlands" target="_blank">KPD</a> (167) – im
-  <a href="https://de.wikipedia.org/wiki/Ernst_Thälmann#Wittorf-Affäre" target="_blank">Wintorf-Skandal</a> von der KPDFührung abgesetzt, aber durch die
+  <a href="https://de.wikipedia.org/wiki/Ernst_Thälmann#Wittorf-Affäre" target="_blank">Wintorf-Skandal</a> von der KPD-Führung abgesetzt, aber durch die
   <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> wieder eingesetzt (194) – am 3. März 1933 verhaftet (389)
   – internationale Kampagne zu seiner Freilassung (402, 489, 538, 552).</li>
   <li><span id="thorez"></span><a href="https://de.wikipedia.org/wiki/Maurice_Thorez" target="_blank"><strong>Thorez, Maurice</strong></a>
@@ -99,11 +100,11 @@
   (1876–1929) 266 <br />
   Schweizer Kommunist; Präsident der Schweizer Sektion der
   <a href="https://de.wikipedia.org/wiki/Internationale_Rote_Hilfe" target="_blank">Internationalen Roten Hilfe</a>, Teilnehmer am »<a href="https://de.wikipedia.org/wiki/Liga_gegen_Imperialismus#Brüsseler_Kongress" target="_blank">Brüsseler Kongress</a> gegen koloniale Unterdrückung und Imperialismus« 1927 (266).</li>
-  <li><span id="togliatti"></span><a href="https://de.wikipedia.org/wiki/Palmiro_Togliatti" target="_blank"><strong>Togliatti, Palmiro</strong></a> (1883–1964) »Alfredo« 20?, 23?, 47?, 48?, 67?, 83?,
-  91?, 110?, 155?, 167?, 179?, 192?, 194-196?, 301?, 302?, 304?, 306?, 317?, 320?,
-  326?, 328-332?, 374?, 408?, 409?, 433?, 438?, 439?, 445?, 448?, 452?, 456?, 457, 458,
-  464?, 472?, 500?, 503?, 504?, 511?, 516?, 518, 529?, 540?, 541-543?, 545, 552?, 553? (Die Seitenzahlen beziehen sich auf Stalin, nicht auf Togliatti) <br />
-  Italienischer Kommunist; wurde von der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> nach Spanien
+  <li><span id="togliatti"></span><a href="https://de.wikipedia.org/wiki/Palmiro_Togliatti" target="_blank"><strong>Togliatti, Palmiro</strong></a> (1883–1964) »Alfredo«, »Ercoli« 28, 164, 168
+  <br />
+  Italienischer Kommunist; Spitzenfunktionär der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (28, 168) –
+  arbeitete regelmäßig ab 1927 mit dem WEB in Berlin zusammen (164) –
+  wurde von der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> nach Spanien
   geschickt (457) - Abbildung (458) – Abbildung (518) – als loyaler Stalinist konnte
   Togliatti die Führung der <a href="https://de.wikipedia.org/wiki/Partito_Comunista_Italiano" target="_blank">PCI</a> nach dem Krieg übernehmen (545).</li>
   <li><a href="https://de.wikipedia.org/wiki/Ernst_Toller" target="_blank"><strong>Toller, Ernst</strong></a>
@@ -145,14 +146,15 @@
   der Schweizer Roten Hilfe machte er sich für den Asylantrag von
   <a href="studerN#neumann">→Heinz Neumann</a> in Moskau stark (436).</li>
   <li><span id="trotzki"></span><a href="https://de.wikipedia.org/wiki/Leo_Trotzki" target="_blank"><strong>Trotzki, Leon</strong></a>
-  (1879–1940) 15, 31, 47, 72, 81, 83, 88, 95, 100, 116, 145, 155, 247,
+  (1879–1940) 15, 31, 47, 72, 73, 81, 83, 88, 95, 100, 116, 145, 155, 247,
   304, 317, 329, 411, 503, 511, 525, 541, 542, 548 <br />
   Mit <a href="studerL#lenin">→Lenin</a> Autor des Manifests des
   Gründungskongresses der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (15) – hatte überragende Autorität
   zur Zeit des II. Weltkongresses (47, 88) – sorgte sich persönlich um
-  die Unterkunft der Delegierten des II. Weltkongresses (72) – wollte
-  seriöses Arbeiten auf dem Kongress (81) – 20 Delegierte des II.
-  Weltkongresses gehörten später der trotzkistischen
+  die Unterkunft der Delegierten des II. Weltkongresses (72) – war gegen
+  den Vormarsch der Roten Armee 1920 auf Warschau (73) - wollte seriöses
+  Arbeiten auf dem Kongress (81) – 20 Delegierte des II.  Weltkongresses
+  gehörten später der trotzkistischen
   <a href="https://de.wikipedia.org/wiki/Linke_Opposition_in_der_Sowjetunion" target="_blank">Linken Opposition</a> an (83) – schlug schon 1919 die »Eröffnung einer
   Ostfront der Weltrevolution« in Asien vor (100) – ließ den indischen
   Aufständischen unter <a href="studerR#roy">→Roys</a> Führung Gewehre liefern
