--- a/studer/studerU.html
+++ b/studer/studerU.html
@@ -34,7 +34,7 @@
   (1904–1963) 404 <br />
   Deutscher Nationalsozialist, später KPD-Mitglied; arbeitete am <a href="https://de.wikipedia.org/wiki/Braunbuch#Braunbuch_1933" target="_blank">Braunbuch über Reichtagsbrand und Hitlerterror</a> mit (404).</li>
   <li><span id="ulbricht"></span><a href="https://de.wikipedia.org/wiki/Walter_Ulbricht" target="_blank"><strong>Ulbricht, Walter</strong></a> (1893–1973) 28, 412, 484, 545 <br />
-  Deutscher Kommunist; trat im Pariser Volksfrontausschuss an die Stelle
+  Deutscher Kommunist; Spitzenfunktionär der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> (28), trat im Pariser Volksfrontausschuss an die Stelle
   <a href="studerM#münzenberg">→Münzenbergs</a>, nachdem dieser 1936 durch die
   <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> aller seiner Funktionen enthoben wurde (412) – einer der
   Stalin loyalen Spitzenfunktionäre, die in der Sowjetunion Unterkunft fanden (545).</li>
