--- a/studer/studerWX.html
+++ b/studer/studerWX.html
@@ -89,7 +89,7 @@
   <li><a href="https://de.wikipedia.org/wiki/Grete_Wilde" target="_blank"><strong>Wilde, Grete</strong></a>
   (1904–1943), »Grete Mertens« 173 <br />
   Deutsche Kommunistin; arbeitete ab 1931 fast vier Jahre als
-  EKKI-Intrukteurin in der Türkei (173).</li>
+  EKKI-Instrukteurin in der Türkei (173).</li>
   <li><strong>Wilhelm, Ernst</strong> 151, 152 <br />
   Deutscher Kommunist; ging eine Scheinehe mit <a href="studerS#stasova">→Elena
   Stasova</a> ein, damit sie eine Aufenthaltsbewilligung in Deutschland
