--- a/studer/studerZ.html
+++ b/studer/studerZ.html
@@ -34,12 +34,15 @@
   (1893–1958), »General Gomez« 508 <br />
   Deutscher Kommunist; als »General Gomez« Kommandant der Basis der
   <a href="https://de.wikipedia.org/wiki/Internationale_Brigaden" target="_blank">Internationalen Brigaden</a> in Albacete (508).</li>
+  <li><strong>Zalewski, Abrecht</strong> <a href="studerA#abramovic">→Abramović, Alexsandr</a></li>
   <li><strong>Zedler, Nikolaj</strong> (1876–1937?), »Herbert«, »Erwin«, »Kurt«, »Norsky« 371 <br />
   <a href="https://de.wikipedia.org/wiki/Otdel_meschdunarodnych_swjasei" target="_blank">OMS</a>-Mitarbeiter, zuständig für den Wiederaufbau der
   <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>-Präsenz in Shanghai 1932 bis 1935 (371).</li>
   <li><a href="https://de.wikipedia.org/wiki/Clara_Zetkin" target="_blank"><strong>Zetkin, Clara</strong></a>
-  (1857–1933) 125, 159, 387 <br />
-  Deutsche Kommunistin; referierte auf dem III. Weltkongress der
+  (1857–1933) 103, 125, 159, 387 <br />
+  Deutsche Kommunistin; sah die »Frauenfrage« als nicht allein in der
+  Klassenfrage begründet (103) – referierte auf dem III. Weltkongress
+  der
   <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> über die zweite Internationale Kommunistische
   Frauenkonferenz (125) – forderte, dass Frauen in der Komintern nicht
   nur legale, sondern auch Untergrundtätigkeiten übernehmen sollten
@@ -67,16 +70,16 @@
   <li><strong>Zillig, Fritz</strong> (1894-?), »A. Müller«, »Karl Müller«, »Karl Mallaun«, 
   »Jakob Burckardt« 415 <br />	
   leitete nach 1933 das Verlags- und Druckwesen der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a> in Basel (415).</li>
-  <li><a href="https://de.wikipedia.org/wiki/Grigori_Jewsejewitsch_Sinowjew" target="_blank"><strong>Zinov’ev, Griogorij</strong></a> (1883–1936) 19, 21. 31, 79, 81, 85, 87, 88, 90,
+  <li><span id="zinovev"></span><a href="https://de.wikipedia.org/wiki/Grigori_Jewsejewitsch_Sinowjew" target="_blank"><strong>Zinov’ev, Griogorij</strong></a> (1883–1936) 19, 21. 31, 79, 81, 85, 87, 88, 90,
   100, 111, 113, 121, 125, 132, 145, 155, 156, 166, 259, 288, 306, 329,
   438, 501, 502 <br />
   Russischer Kommunist; erster Vorsitzender der <a href="https://de.wikipedia.org/wiki/Kommunistische_Internationale" target="_blank">Komintern</a>, die er zu
-  einer »Kampforganisation« machen wollte (19, 21) – II. Weltkongress,
-  Abbildung (85, 88) – Aufnahmebedingungen in die Internationale sollten
+  einer »Kampforganisation« machen wollte (19, 21) – II. Weltkongress (87),
+  Foto (85, 88) – Aufnahmebedingungen in die Internationale sollten
   »Bollwerk gegen den Zentrismus« sein (90) – seine Vorhersage, dass bis
   1920 ganz Europa kommunistisch sein werde, erfüllte sich nicht (100) –
   hochrangiger Teilnehmer am <a href="https://de.wikipedia.org/wiki/Kongress_der_Völker_des_Ostens" target="_blank">Kongress der Völker des Ostens</a> 1920 in Baku (111, 121), auf dem er die
-  »unterdrückten Völker« als revolutioinäres Subjekt ausrief (125, 132)
+  »unterdrückten Völker« als revolutionäres Subjekt ausrief (125, 132)
   – lebte vor der Revolution im Schweizer Exil (145) – 1926 von der
   Präsidentschaft der Komintern abgesetzt (155, 166) –  1927 aus der
   Partei ausgeschlossen (329) – 1934 verhaftet und 1935 zu zehn Jahren
@@ -84,7 +87,7 @@
   <a href="https://de.wikipedia.org/wiki/Moskauer_Prozesse#1._Prozess" target="_blank">1. Moskauer Schauprozess</a>, verurteilt und 1936 exekutiert (501f).</li>
   <li><span id="zörgiebel"></span><a href="https://de.wikipedia.org/wiki/Karl_Zörgiebel" target="_blank"><strong>Zörgiebel, Karl</strong></a> (1878–1961) 197, 393 <br />
   Deutscher Sozialdemokrat; verantwortlich für das Vorgehen der Polizei
-  im sogenannten <a href="https://de.wikipedia.org/wiki/Blutmai. Blutmai" target="_blank"></a>
+  im sogenannten <a href="https://de.wikipedia.org/wiki/Blutmai" target="_blank">Blutmai</a>
   (197).</li>
 </ul>
 
