--- a/krimis/paretsky.html
+++ b/krimis/paretsky.html
@@ -77,7 +77,7 @@ likable female private investigator, and that’s how VI came to life.</p>
 <nav class="nav">
 	<div class="nav-right">
 	
-	<a class="active" href="nunn">&lt; Malla Nunn</a>
+	<a class="active" href="pavone">&lt; Chris Pavone</a>
 	
 	
 	
