--- a/krimis/pavone.html
+++ b/krimis/pavone.html
@@ -16,7 +16,7 @@
 	<div class="logo is-center is-vertical-align">
 		<a href="/index.html"> <img src="/img/mixc.svg" alt="Banner
 			Miscellanea"></a> 
-		<h4 class="text-grey"> Krimiserien - Gil Ribeiro</h4>
+		<h4 class="text-grey"> Krimiserien - Chris Pavone</h4>
  	</div>
 	<hr style="height:2px; margin-top:8px; margin-bottom:0px;"/>
 </div>
@@ -27,28 +27,30 @@
 						<a class="active" href="/index.html">⌾ Startseite</a>
 					</div>
 			</nav>		
-      <h2 id="gil-ribeiro">Gil Ribeiro</h2>
+      <h2 id="chris-pavone">Chris Pavone</h2>
 
-<p><a href="https://de.wikipedia.org/wiki/Holger_Karsten_Schmidt" target="_blank">Gil Ribeiro</a> (eigentlich Holger Karsten Schmidt) ist ein deutscher Autor.</p>
+<p><a href="https://en.wikipedia.org/wiki/Chris_Pavone" target="_blank">Chris Pavone</a>
+ist ein amerikanischer Autor: <a href="http://www.chrispavone.com" target="_blank">Homepage</a>.</p>
 
-<h4 id="leander-lost-reihe">Leander-Lost-Reihe</h4>
+<h4 id="romane">Romane</h4>
 
 <ul>
-  <li>2017: <em>Lost in Fuseta</em></li>
-  <li>2018: <em>Lost in Fuseta – Spur der Schatten</em></li>
-  <li>2019: Weiße Fracht – Lost in Fuseta</li>
-  <li>2020: <em>Schwarzer August – Lost in Fuseta</em></li>
+  <li>2012: <em>The Expats</em></li>
+  <li>2014: The Accident</li>
+  <li>2016: The Travelers</li>
+  <li>2019: The Paris Diversion</li>
+  <li>2022: Two Nights in Lisbon</li>
 </ul>
 
 <!-- previous and next page -->
 <nav class="nav">
 	<div class="nav-right">
 	
-	<a class="active" href="rankin">&lt; Ian Rankin</a>
+	<a class="active" href="nunn">&lt; Malla Nunn</a>
 	
 	
 	
-	<a class="active" href="robotham">Michael Robotham &gt;</a>
+	<a class="active" href="paretsky">Sara Paretsky &gt;</a>
 	
 	</div>
 </nav>
