--- a/studer/studerV.html
+++ b/studer/studerV.html
@@ -35,7 +35,7 @@
   Französischer Kommunist; Chefredakteur der
   <a href="https://de.wikipedia.org/wiki/L’Humanité" target="_blank"><em>L’Humanité</em></a> (395).</li>
   <li><span id="vallentin"></span><a href="https://de.wikipedia.org/wiki/Maxim_Vallentin" target="_blank"><strong>Vallentin, Maxim</strong></a> (1904–1987) 201<br />
-  Deutscher Schauspieler und Regisseur, zusammen mit <a href="studerIJ#jahnke">→Franz Jahnke</a> Autor des Textes des <em>Lieds der Komintern</em> (201).</li>
+  Deutscher Schauspieler und Regisseur; zusammen mit <a href="studerIJ#jahnke">→Franz Jahnke</a> Autor des Textes des <em>Lieds der Komintern</em> (201).</li>
   <li><a href="https://de.wikipedia.org/wiki/Ludwig_Mies_van_der_Rohe" target="_blank"><strong>van der Rohe, Ludwig, Mies</strong></a> (1886–1969) 367 <br />
   Deutsch-amerikanischer Architekt; beteiligte sich an der Kampagne für
   die Freilassung der in China verhafteten Komintern-Funktionäre
